Update export directives for documentation.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,83 +115,83 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_utils\n",
     "    cli_display --> cli_factory_extraction\n",
+    "    cli_display --> cli_core_utils_discovery\n",
     "    cli_display --> cli_example_discovery\n",
+    "    cli_display --> cli_utils\n",
+    "    cli_display --> cli_cli_config\n",
     "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_imports\n",
-    "    cli_display --> cli_helper_discovery\n",
-    "    cli_display --> cli_cli_config\n",
-    "    cli_display --> cli_core_utils_discovery\n",
     "    cli_display --> cli_search\n",
+    "    cli_display --> cli_helper_discovery\n",
     "    cli_display --> cli_test_code\n",
-    "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_display\n",
     "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
     "    cli_dynamic_examples --> cli_example_discovery\n",
+    "    cli_dynamic_examples --> cli_utils\n",
+    "    cli_dynamic_examples --> cli_cli_config\n",
+    "    cli_dynamic_examples --> cli_display\n",
     "    cli_dynamic_examples --> cli_pattern_scanner\n",
     "    cli_dynamic_examples --> cli_imports\n",
-    "    cli_dynamic_examples --> cli_helper_discovery\n",
-    "    cli_dynamic_examples --> cli_cli_config\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
     "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_helper_discovery\n",
     "    cli_dynamic_examples --> cli_test_code\n",
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_display\n",
+    "    cli_explorer --> cli_cli_config\n",
     "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_utils\n",
-    "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
+    "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_helper_discovery\n",
-    "    cli_search --> cli_factory_extraction\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_cli_config\n",
+    "    cli_search --> cli_example_discovery\n",
     "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_utils --> cli_cli_config\n",
     "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> core_resources\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_transitions_and_animation\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_accessibility\n",
-    "    utilities_accessibility --> core_testing\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> builders_scales\n",
+    "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_backgrounds --> core_testing\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_borders --> builders_scales\n",
+    "    utilities_backgrounds --> core_base\n",
+    "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> core_testing\n",
-    "    utilities_effects --> builders_scales\n",
+    "    utilities_borders --> builders_colors\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> core_testing\n",
+    "    utilities_effects --> builders_colors\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_filters --> core_testing\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
@@ -200,32 +200,32 @@
     "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
     "    utilities_sizing --> core_base\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> core_testing\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> core_testing\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_tables --> builders_scales\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> core_testing\n",
-    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_testing\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> core_base\n",
-    "    utilities_typography --> builders_colors\n",
     "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
     "*114 cross-module dependencies detected*"
@@ -356,14 +356,13 @@
     "\n",
     "```python\n",
     "from cjm_fasthtml_tailwind.utilities.accessibility import (\n",
-    "    FORCED_COLOR_ADJUST_VALUES,\n",
     "    forced_color_adjust,\n",
     "    sr_only,\n",
     "    not_sr_only,\n",
+    "    ForcedColorAdjust,\n",
     "    test_accessibility_forced_color_adjust_examples,\n",
     "    test_accessibility_screen_reader_examples,\n",
     "    test_accessibility_fasthtml_examples,\n",
-    "    test_accessibility_factory_documentation,\n",
     "    visually_hidden,\n",
     "    high_contrast_safe,\n",
     "    test_accessibility_helper_examples\n",
@@ -388,12 +387,6 @@
     "def test_accessibility_fasthtml_examples(\n",
     ")\n",
     "    \"Test accessibility utilities in practical FastHTML component examples.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_accessibility_factory_documentation(\n",
-    ")\n",
-    "    \"Test that factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -432,10 +425,17 @@
     "    \"Test helper functions for common accessibility patterns.\"\n",
     "```\n",
     "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class ForcedColorAdjust(Enum):\n",
+    "    \"Forced color utility values\"\n",
+    "```\n",
+    "\n",
     "#### Variables\n",
     "\n",
     "```python\n",
-    "FORCED_COLOR_ADJUST_VALUES = {2 items}\n",
+    "forced_color_adjust  # The forced color adjust factory\n",
     "```"
    ]
   },
@@ -464,7 +464,9 @@
     "    bg_position,\n",
     "    bg_repeat,\n",
     "    bg_size,\n",
+    "    BackgroundAttachment,\n",
     "    test_backgrounds_attachment_examples,\n",
+    "    BackgroundClip,\n",
     "    test_backgrounds_clip_examples,\n",
     "    test_backgrounds_color_examples,\n",
     "    test_backgrounds_opacity_examples,\n",
@@ -480,8 +482,7 @@
     "    test_backgrounds_repeat_examples,\n",
     "    test_backgrounds_size_examples,\n",
     "    test_backgrounds_arbitrary_examples,\n",
-    "    test_backgrounds_fasthtml_examples,\n",
-    "    test_backgrounds_factory_documentation\n",
+    "    test_backgrounds_fasthtml_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -552,12 +553,17 @@
     "    \"Test background utilities in practical FastHTML component examples.\"\n",
     "```\n",
     "\n",
+    "#### Classes\n",
+    "\n",
     "```python\n",
-    "def test_backgrounds_factory_documentation()\n",
-    "    \"Test that background factories have accessible documentation.\"\n",
+    "class BackgroundAttachment(Enum):\n",
+    "    \"Background attachment utility values\"\n",
     "```\n",
     "\n",
-    "#### Classes\n",
+    "```python\n",
+    "class BackgroundClip(Enum):\n",
+    "    \"Background clip utility values\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "class GradientUtility:\n",
@@ -639,6 +645,8 @@
     "#### Variables\n",
     "\n",
     "```python\n",
+    "bg_attachment  # Background attachment factory\n",
+    "bg_clip  # Background clip factory\n",
     "bg  # The background color factory\n",
     "bg_none  # Remove background image\n",
     "```"
@@ -1292,8 +1300,7 @@
     "    test_borders_outline_color_examples,\n",
     "    test_borders_outline_style_examples,\n",
     "    test_borders_outline_offset_examples,\n",
-    "    test_borders_fasthtml_examples,\n",
-    "    test_borders_factory_documentation\n",
+    "    test_borders_fasthtml_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -1357,11 +1364,6 @@
     "```python\n",
     "def test_borders_fasthtml_examples()\n",
     "    \"Test border utilities in practical FastHTML component examples.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_borders_factory_documentation()\n",
-    "    \"Test that border factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -2329,8 +2331,7 @@
     "    test_effects_shadow_fasthtml_examples,\n",
     "    test_effects_shadow_composition_fasthtml_examples,\n",
     "    test_effects_comprehensive_fasthtml_examples,\n",
-    "    test_effects_mask_fasthtml_examples,\n",
-    "    test_effects_factory_documentation\n",
+    "    test_effects_mask_fasthtml_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -2484,11 +2485,6 @@
     "```python\n",
     "def test_effects_mask_fasthtml_examples()\n",
     "    \"Test mask utilities in practical FastHTML component examples.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_effects_factory_documentation()\n",
-    "    \"Test that effect factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -3097,8 +3093,7 @@
     "    test_filters_saturate_examples,\n",
     "    test_filters_sepia_examples,\n",
     "    test_filters_backdrop_examples,\n",
-    "    test_filters_fasthtml_examples,\n",
-    "    test_filters_factory_documentation\n",
+    "    test_filters_fasthtml_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -3162,11 +3157,6 @@
     "```python\n",
     "def test_filters_fasthtml_examples()\n",
     "    \"Test filter utilities in practical FastHTML component examples.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_filters_factory_documentation()\n",
-    "    \"Test that filter factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -3312,8 +3302,7 @@
     "    flex_col_center,\n",
     "    grid_center,\n",
     "    responsive_grid,\n",
-    "    test_flexbox_and_grid_helper_examples,\n",
-    "    test_flexbox_and_grid_factory_documentation\n",
+    "    test_flexbox_and_grid_helper_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -3471,12 +3460,6 @@
     "def test_flexbox_and_grid_helper_examples(\n",
     ")\n",
     "    \"Test helper functions for common flexbox and grid patterns.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_flexbox_and_grid_factory_documentation(\n",
-    ")\n",
-    "    \"Test that factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -3953,7 +3936,6 @@
     "    test_interactivity_form_fasthtml_examples,\n",
     "    test_interactivity_scroll_snap_fasthtml_examples,\n",
     "    test_interactivity_touch_mobile_fasthtml_examples,\n",
-    "    test_interactivity_factory_documentation,\n",
     "    test_interactivity_advanced_fasthtml_examples\n",
     ")\n",
     "```\n",
@@ -4048,11 +4030,6 @@
     "```python\n",
     "def test_interactivity_touch_mobile_fasthtml_examples()\n",
     "    \"Test touch and mobile interaction utilities.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_interactivity_factory_documentation()\n",
-    "    \"Test that interactivity factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -4160,7 +4137,6 @@
     "    test_layout_fasthtml_examples,\n",
     "    test_layout_enhanced_factories_fasthtml_examples,\n",
     "    test_layout_modifier_examples,\n",
-    "    test_layout_factory_documentation,\n",
     "    center_absolute,\n",
     "    stack_context,\n",
     "    sticky_top,\n",
@@ -4253,12 +4229,6 @@
     "def test_layout_modifier_examples(\n",
     ")\n",
     "    \"Test layout utilities with modifiers for conditional styling.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_layout_factory_documentation(\n",
-    ")\n",
-    "    \"Test that factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -5127,7 +5097,6 @@
     "    test_sizing_size_util_examples,\n",
     "    test_sizing_max_height_examples,\n",
     "    test_sizing_fasthtml_examples,\n",
-    "    test_sizing_factory_documentation,\n",
     "    size,\n",
     "    square,\n",
     "    full_size,\n",
@@ -5217,12 +5186,6 @@
     "```\n",
     "\n",
     "```python\n",
-    "def test_sizing_factory_documentation(\n",
-    ")\n",
-    "    \"Test that factories have accessible documentation.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
     "def size(\n",
     "    w: Optional[TailwindScale] = None,        # Width value\n",
     "    h: Optional[TailwindScale] = None,        # Height value\n",
@@ -5304,8 +5267,7 @@
     "    margin,\n",
     "    test_spacing_helper_examples,\n",
     "    test_spacing_modifier_examples,\n",
-    "    test_spacing_enhanced_factory_examples,\n",
-    "    test_spacing_factory_documentation\n",
+    "    test_spacing_enhanced_factory_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -5410,12 +5372,6 @@
     "    \"Test enhanced SingleValueFactory support in spacing utilities.\"\n",
     "```\n",
     "\n",
-    "```python\n",
-    "def test_spacing_factory_documentation(\n",
-    ")\n",
-    "    \"Test that factories have accessible documentation.\"\n",
-    "```\n",
-    "\n",
     "#### Classes\n",
     "\n",
     "```python\n",
@@ -5493,7 +5449,6 @@
     "    test_svg_fasthtml_examples,\n",
     "    test_svg_icon_fasthtml_examples,\n",
     "    test_svg_progress_ring_fasthtml_examples,\n",
-    "    test_svg_factory_documentation,\n",
     "    test_svg_edge_cases,\n",
     "    svg_icon_classes,\n",
     "    test_svg_helper_functions\n",
@@ -5568,11 +5523,6 @@
     "    # Progress ring component\n",
     "    def ProgressRing(percentage: int, size: int = 120)\n",
     "    \"Test creating a progress ring component.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_svg_factory_documentation()\n",
-    "    \"Test that SVG factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -5671,8 +5621,7 @@
     "    test_tables_caption_side_examples,\n",
     "    test_tables_all_utilities,\n",
     "    test_tables_fasthtml_examples,\n",
-    "    test_tables_complex_fasthtml_examples,\n",
-    "    test_tables_factory_documentation\n",
+    "    test_tables_complex_fasthtml_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -5726,11 +5675,6 @@
     "```python\n",
     "def test_tables_complex_fasthtml_examples()\n",
     "    \"Test a complex table example with various styling.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_tables_factory_documentation()\n",
-    "    \"Test that table factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -6004,8 +5948,7 @@
     "    hover_scale,\n",
     "    flip_card_3d,\n",
     "    parallax_transform,\n",
-    "    test_transforms_helper_examples,\n",
-    "    test_transforms_factory_documentation\n",
+    "    test_transforms_helper_examples\n",
     ")\n",
     "```\n",
     "\n",
@@ -6092,11 +6035,6 @@
     "```python\n",
     "def test_transforms_helper_examples()\n",
     "    \"Test helper functions for common transform patterns.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_transforms_factory_documentation()\n",
-    "    \"Test that transform factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -6357,7 +6295,6 @@
     "    test_transitions_and_animation_fasthtml_examples,\n",
     "    test_transitions_and_animation_animation_fasthtml_examples,\n",
     "    test_transitions_and_animation_composition_fasthtml_examples,\n",
-    "    test_transitions_and_animation_factory_documentation,\n",
     "    smooth_transition,\n",
     "    hover_effect,\n",
     "    fade_in,\n",
@@ -6416,11 +6353,6 @@
     "```python\n",
     "def test_transitions_and_animation_composition_fasthtml_examples()\n",
     "    \"Test composing multiple transition utilities together.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def test_transitions_and_animation_factory_documentation()\n",
-    "    \"Test that transition and animation factories have accessible documentation.\"\n",
     "```\n",
     "\n",
     "```python\n",
