--- a/nbs/utilities/accessibility.ipynb
+++ b/nbs/utilities/accessibility.ipynb
@@ -39,11 +39,12 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "from enum import Enum\n",
     "from typing import Dict, Any\n",
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    SingleValueFactory, combine_classes\n",
     ")\n",
-    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory\n",
+    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory, enums_to_simple_factory\n",
     "\n",
     "from fasthtml.common import Div\n",
     "from fasthtml.jupyter import JupyUvi, HTMX\n",
@@ -64,22 +65,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b51fba4-22dc-444e-ac06-15fd2c24c392",
+   "id": "195d1870-6430-4e9f-a548-3d0e3629e6a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "# Forced color adjust utilities\n",
-    "FORCED_COLOR_ADJUST_VALUES = {\n",
-    "    \"auto\": \"forced-color-adjust-auto\",\n",
-    "    \"none\": \"forced-color-adjust-none\"\n",
-    "}\n",
+    "#|exports\n",
+    "class ForcedColorAdjust(Enum):\n",
+    "    \"\"\"Forced color utility values\"\"\"\n",
+    "    AUTO = \"auto\"\n",
+    "    NONE = \"none\"\n",
     "\n",
     "# Create forced color adjust factory\n",
-    "forced_color_adjust = SimpleFactory(\n",
-    "    FORCED_COLOR_ADJUST_VALUES, \n",
-    "    \"Forced color adjust utilities for opting in and out of forced colors (e.g., Windows High Contrast Mode)\"\n",
-    ") # The forced color adjust factory"
+    "forced_color_adjust = enums_to_simple_factory(\"forced-color-adjust\", [ForcedColorAdjust], \"Forced color adjust utilities for opting in and out of forced colors (e.g., Windows High Contrast Mode)\") # The forced color adjust factory"
    ]
   },
   {
@@ -118,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "# Screen reader utilities\n",
     "sr_only = SingleValueFactory(\"sr-only\", \"Hide element visually but keep it available to screen readers\")\n",
     "not_sr_only = SingleValueFactory(\"not-sr-only\", \"Undo sr-only, making element visible again\")"
@@ -336,35 +333,6 @@
     "server = start_test_server(app)\n",
     "display(HTMX())\n",
     "server.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "286df587-eb85-42c6-a414-6c26a9e27b07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_accessibility_factory_documentation(\n",
-    "):\n",
-    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
-    "    # Test factory documentation\n",
-    "    assert forced_color_adjust.describe() == \"Forced color adjust utilities for opting in and out of forced colors (e.g., Windows High Contrast Mode)\"\n",
-    "    \n",
-    "    # Test SingleValueFactory documentation for imported utilities\n",
-    "    assert sr_only.describe() == \"Hide element visually but keep it available to screen readers\"\n",
-    "    assert not_sr_only.describe() == \"Undo sr-only, making element visible again\"\n",
-    "    \n",
-    "    # Test get_info method\n",
-    "    info = forced_color_adjust.get_info()\n",
-    "    assert info['description'] == \"Forced color adjust utilities for opting in and out of forced colors (e.g., Windows High Contrast Mode)\"\n",
-    "    assert 'available_values' in info['options']\n",
-    "    assert 'auto' in info['options']['available_values']\n",
-    "    assert 'none' in info['options']['available_values']\n",
-    "\n",
-    "# Run the tests\n",
-    "test_accessibility_factory_documentation()"
    ]
   },
   {
