--- a/nbs/utilities/backgrounds.ipynb
+++ b/nbs/utilities/backgrounds.ipynb
@@ -39,13 +39,14 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "from enum import Enum\n",
     "from typing import Optional, Dict, Any, Union\n",
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    SingleValueFactory, BaseFactory, BaseUtility, StandardUtility, \n",
     "    combine_classes, TailwindValue, is_custom_property, is_arbitrary_value\n",
     ")\n",
     "from cjm_fasthtml_tailwind.builders.colors import ColoredFactory, ColorValue, ColoredUtility\n",
-    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory, NUMERIC_SCALE\n",
+    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory, NUMERIC_SCALE, enums_to_simple_factory\n",
     "\n",
     "from fasthtml.common import Div\n",
     "from fasthtml.jupyter import JupyUvi, HTMX\n",
@@ -70,15 +71,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "bg_attachment = SimpleFactory(\n",
-    "    {\n",
-    "        \"fixed\": \"bg-fixed\",\n",
-    "        \"local\": \"bg-local\", \n",
-    "        \"scroll\": \"bg-scroll\"\n",
-    "    },\n",
-    "    \"Background attachment utilities for controlling how a background image behaves when scrolling\"\n",
-    ") # Background attachment factory"
+    "#|exports\n",
+    "class BackgroundAttachment(Enum):\n",
+    "    \"\"\"Background attachment utility values\"\"\"\n",
+    "    FIXED = \"fixed\"\n",
+    "    LOCAL = \"local\"\n",
+    "    SCROLL = \"scroll\"\n",
+    "\n",
+    "bg_attachment = enums_to_simple_factory(\"bg\", [BackgroundAttachment], \"Background attachment utilities for controlling how a background image behaves when scrolling\") # Background attachment factory"
    ]
   },
   {
@@ -120,20 +120,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f55723-a69f-41f9-a085-a9ff02656d3b",
+   "id": "604f52e5-b610-45fd-9e25-91ef9c0ac1fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "bg_clip = SimpleFactory(\n",
-    "    {\n",
-    "        \"border\": \"bg-clip-border\",\n",
-    "        \"padding\": \"bg-clip-padding\",\n",
-    "        \"content\": \"bg-clip-content\",\n",
-    "        \"text\": \"bg-clip-text\"\n",
-    "    },\n",
-    "    \"Background clip utilities for controlling the bounding box of an element's background\"\n",
-    ") # Background clip factory"
+    "#|exports\n",
+    "class BackgroundClip(Enum):\n",
+    "    \"\"\"Background clip utility values\"\"\"\n",
+    "    BORDER = \"border\"\n",
+    "    PADDING = \"padding\"\n",
+    "    CONTENT = \"content\"\n",
+    "    TEXT = \"text\"\n",
+    "\n",
+    "bg_clip = enums_to_simple_factory(\"bg-clip\", [BackgroundClip], \"Background clip utilities for controlling the bounding box of an element's background\") # Background clip factory"
    ]
   },
   {
@@ -180,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|exports\n",
     "bg = ColoredFactory(\"bg\", \"Background color utilities for controlling an element's background color\") # The background color factory"
    ]
   },
@@ -303,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "bg_none = SingleValueFactory(\"bg-none\", \"Remove background image\") # Remove background image"
    ]
   },
@@ -412,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "kfw71vuvlz",
+   "id": "9f0a209f-fb11-44a0-97ca-035a85355baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,8 +497,17 @@
     "                'Arbitrary values: \"from 45deg at center\"'\n",
     "            ]\n",
     "        \n",
-    "        return info\n",
-    "\n",
+    "        return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daf6251e-1db3-41d4-b17c-b2b2c6379224",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create gradient factories\n",
     "bg_linear = GradientFactory(\"linear\", \"Linear gradient utilities for creating gradient backgrounds\")\n",
     "bg_radial = GradientFactory(\"radial\", \"Radial gradient utilities for creating circular gradient backgrounds\") \n",
@@ -586,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09xi81y21w",
+   "id": "f60129e6-744a-4a39-b1af-8185effa97c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,8 +642,17 @@
     "            return GradientStopUtility(self.stop_type, f\"{percentage}%\")\n",
     "        \n",
     "        # Otherwise, use parent's color handling\n",
-    "        return super().__getattr__(name)\n",
-    "\n",
+    "        return super().__getattr__(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be5a292b-ee7b-41f2-a629-be410b67828b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create enhanced gradient stop factories\n",
     "from_color = GradientStopFactory(\"from\", \"Gradient from color/position utilities for defining the starting color or position of a gradient\")\n",
     "via_color = GradientStopFactory(\"via\", \"Gradient via color/position utilities for defining the middle color or position of a gradient\")\n",
@@ -907,7 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "bg_origin = SimpleFactory(\n",
     "    {\n",
     "        \"border\": \"bg-origin-border\",\n",
@@ -953,7 +970,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "bg_position = SimpleFactory(\n",
     "    {\n",
     "        \"top_left\": \"bg-top-left\",\n",
@@ -1007,7 +1024,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "bg_repeat = SimpleFactory(\n",
     "    {\n",
     "        \"repeat\": \"bg-repeat\",\n",
@@ -1057,7 +1074,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "bg_size = SimpleFactory(\n",
     "    {\n",
     "        \"auto\": \"bg-auto\",\n",
@@ -1284,69 +1301,6 @@
     "server = start_test_server(app)\n",
     "display(HTMX())\n",
     "server.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6dd3055-6db3-4dcd-923e-3446f28d6b44",
-   "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03090b96-68a7-470d-9f80-ab4d8cf8c099",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_backgrounds_factory_documentation():\n",
-    "    \"\"\"Test that background factories have accessible documentation.\"\"\"\n",
-    "    # Test color factory\n",
-    "    assert bg.describe() == \"Background color utilities for controlling an element's background color\"\n",
-    "    \n",
-    "    # Test simple factories\n",
-    "    assert bg_attachment.describe() == \"Background attachment utilities for controlling how a background image behaves when scrolling\"\n",
-    "    assert bg_clip.describe() == \"Background clip utilities for controlling the bounding box of an element's background\"\n",
-    "    assert bg_origin.describe() == \"Background origin utilities for controlling how an element's background is positioned relative to borders, padding, and content\"\n",
-    "    assert bg_position.describe() == \"Background position utilities for controlling the position of an element's background image\"\n",
-    "    assert bg_repeat.describe() == \"Background repeat utilities for controlling the repetition of an element's background image\"\n",
-    "    assert bg_size.describe() == \"Background size utilities for controlling the background size of an element's background image\"\n",
-    "    \n",
-    "    # Test gradient factories\n",
-    "    assert bg_linear.describe() == \"Linear gradient utilities for creating gradient backgrounds\"\n",
-    "    assert bg_radial.describe() == \"Radial gradient utilities for creating circular gradient backgrounds\"\n",
-    "    assert bg_conic.describe() == \"Conic gradient utilities for creating conical gradient backgrounds\"\n",
-    "    assert bg_none.describe() == \"Remove background image\"\n",
-    "    \n",
-    "    # Test gradient color stop factories\n",
-    "    assert from_color.describe() == \"Gradient from color/position utilities for defining the starting color or position of a gradient\"\n",
-    "    assert via_color.describe() == \"Gradient via color/position utilities for defining the middle color or position of a gradient\"\n",
-    "    assert to_color.describe() == \"Gradient to color/position utilities for defining the ending color or position of a gradient\"\n",
-    "    \n",
-    "    # Test get_info methods\n",
-    "    bg_info = bg.get_info()\n",
-    "    assert 'color_families' in bg_info['valid_inputs']\n",
-    "    assert bg_info['options']['supports_opacity'] == True\n",
-    "    \n",
-    "    attachment_info = bg_attachment.get_info()\n",
-    "    assert 'fixed' in attachment_info['options']['available_values']\n",
-    "    assert 'local' in attachment_info['options']['available_values']\n",
-    "    assert 'scroll' in attachment_info['options']['available_values']\n",
-    "    \n",
-    "    # Test gradient factory info\n",
-    "    linear_info = bg_linear.get_info()\n",
-    "    assert 'gradient_type' in linear_info\n",
-    "    assert linear_info['gradient_type'] == 'linear'\n",
-    "    assert 'Directions:' in linear_info['valid_inputs'][0]\n",
-    "    assert 'Angles:' in linear_info['valid_inputs'][1]\n",
-    "\n",
-    "# Run the tests\n",
-    "test_backgrounds_factory_documentation()"
    ]
   },
   {
