--- a/nbs/utilities/borders.ipynb
+++ b/nbs/utilities/borders.ipynb
@@ -46,7 +46,7 @@
     "    combine_classes, TailwindValue, is_custom_property, is_arbitrary_value,\n",
     "    NamedScale\n",
     ")\n",
-    "from cjm_fasthtml_tailwind.builders.scales import ScaledFactory, ScaleConfig\n",
+    "from cjm_fasthtml_tailwind.builders.scales import ScaledFactory, ScaleConfig, SimpleFactory\n",
     "from cjm_fasthtml_tailwind.builders.colors import ColoredFactory, ColorValue\n",
     "\n",
     "from fasthtml.common import Div\n",
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "RADIUS_SCALES = [ # Border radius named scales\n",
     "    NamedScale(\"xs\", \"--radius-xs\", \"0.125rem (2px)\"),\n",
     "    NamedScale(\"sm\", \"--radius-sm\", \"0.25rem (4px)\"),\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81569ee2-bb35-484c-afbb-69aca0082b89",
+   "id": "0258e4c9-0a12-4e77-8269-28b34fb64756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,8 +208,17 @@
     "                    'bl': 'Bottom-left corner'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7ebd7b2-915e-411f-90d8-c5a077622dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create the main rounded factory\n",
     "rounded = RoundedFactory(\"Border radius utilities for controlling the roundness of element corners\")"
    ]
@@ -378,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4380c6e-8a60-4aae-904d-8b7076a27e04",
+   "id": "c21f2db1-b7d7-4ec3-8327-954472c056e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,8 +516,17 @@
     "    \n",
     "    def describe(self) -> str:\n",
     "        \"\"\"Return the documentation for this factory.\"\"\"\n",
-    "        return self._doc\n",
-    "\n",
+    "        return self._doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c3c820-7579-4eb5-95a1-3ec0dcbe323f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create the main border width factory\n",
     "border = BorderWidthFactory(\"Border width utilities for controlling the width of element borders\")"
    ]
@@ -599,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "415b7e26-e1f8-4ef0-9263-e768acc6f0c4",
+   "id": "d73cc55f-0b66-4e19-93ad-01dfd380ca4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,8 +655,17 @@
     "                'x_reverse': 'Reverse horizontal divide order (for flex-row-reverse)',\n",
     "                'y_reverse': 'Reverse vertical divide order (for flex-col-reverse)'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a337e446-7f29-4ba5-b92c-114089ad393d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create the divide factory\n",
     "divide = DivideFactory()"
    ]
@@ -719,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fjvada3qdeu",
+   "id": "1620e218-8772-4179-a114-41efbb0def69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,8 +822,17 @@
     "                'border_color(\"#ff0000\")',\n",
     "                'border_color(\"--custom-border-color\")'\n",
     "            ]\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9de39dc4-037b-4634-916d-fdd4288b63e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create the main border color factory\n",
     "border_color = BorderColorFactory(\"Border color utilities for controlling the color of element borders\")"
    ]
@@ -916,7 +952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create the divide color factory using ColoredFactory\n",
     "divide_color = ColoredFactory(\"divide\", \"Divide color utilities for controlling the color of borders between child elements\")"
    ]
@@ -1018,9 +1054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "from cjm_fasthtml_tailwind.builders.scales import SimpleFactory\n",
-    "\n",
+    "#| exports\n",
     "# Create border style factory\n",
     "border_style = SimpleFactory(\n",
     "    {\n",
@@ -1089,7 +1123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create divide style factory\n",
     "divide_style = SimpleFactory(\n",
     "    {\n",
@@ -1180,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "y12wb3xncpn",
+   "id": "1188fd8c-7afb-4f35-98e8-2ebf3e388309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,8 +1264,17 @@
     "                'arbitrary_values': 'Any CSS length value (e.g., \"3px\", \"0.5rem\")',\n",
     "                'custom_properties': 'CSS variables starting with -- (e.g., \"--outline-width\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4162fae-e95a-4ad4-b3ac-ca78d64d0fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create the main outline width factory\n",
     "outline = OutlineWidthFactory(\"Outline width utilities for controlling the width of element outlines\")"
    ]
@@ -1306,7 +1349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create the outline color factory using ColoredFactory\n",
     "outline_color = ColoredFactory(\"outline\", \"Outline color utilities for controlling the color of element outlines\")"
    ]
@@ -1403,11 +1446,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c83bnripw4",
+   "id": "dcd1ab29-15a5-4d23-ba14-65db5bdaa464",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create outline style factory with special handling for outline-hidden\n",
     "outline_style = SimpleFactory(\n",
     "    {\n",
@@ -1418,8 +1461,17 @@
     "        \"none\": \"outline-none\"\n",
     "    },\n",
     "    \"Outline style utilities for controlling the style of element outlines\"\n",
-    ") # Outline style factory\n",
-    "\n",
+    ") # Outline style factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9879207f-3fce-4cab-adfb-f9bd10521806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Add outline-hidden as a special single value factory\n",
     "outline_hidden = SingleValueFactory(\n",
     "    \"outline-hidden\", \n",
@@ -1509,7 +1561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create the outline offset factory\n",
     "outline_offset = ScaledFactory(\n",
     "    \"outline-offset\", \n",
@@ -1568,14 +1620,6 @@
     "# Run the tests\n",
     "test_borders_outline_offset_examples()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da575b60-90d9-466d-b977-101e20a68f49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1997,152 +2041,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3cc609ea-03f9-4582-b51a-93ada5b17129",
-   "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2517382-8805-412b-ae76-04fb406dd28a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_borders_factory_documentation():\n",
-    "    \"\"\"Test that border factories have accessible documentation.\"\"\"\n",
-    "    # Test rounded factory\n",
-    "    assert rounded.describe() == \"Border radius utilities for controlling the roundness of element corners\"\n",
-    "    \n",
-    "    # Test rounded sub-factories\n",
-    "    assert rounded.t.describe() == \"Top border radius\"\n",
-    "    assert rounded.r.describe() == \"Right border radius\"\n",
-    "    assert rounded.b.describe() == \"Bottom border radius\"\n",
-    "    assert rounded.l.describe() == \"Left border radius\"\n",
-    "    assert rounded.s.describe() == \"Start (left in LTR) border radius\"\n",
-    "    assert rounded.e.describe() == \"End (right in LTR) border radius\"\n",
-    "    \n",
-    "    # Test corner factories\n",
-    "    assert rounded.tl.describe() == \"Top-left corner radius\"\n",
-    "    assert rounded.tr.describe() == \"Top-right corner radius\"\n",
-    "    assert rounded.br.describe() == \"Bottom-right corner radius\"\n",
-    "    assert rounded.bl.describe() == \"Bottom-left corner radius\"\n",
-    "    assert rounded.ss.describe() == \"Start-start corner radius\"\n",
-    "    assert rounded.se.describe() == \"Start-end corner radius\"\n",
-    "    assert rounded.ee.describe() == \"End-end corner radius\"\n",
-    "    assert rounded.es.describe() == \"End-start corner radius\"\n",
-    "    \n",
-    "    # Test border width factory\n",
-    "    assert border.describe() == \"Border width utilities for controlling the width of element borders\"\n",
-    "    \n",
-    "    # Test border directional factories\n",
-    "    assert border.t.describe() == \"Top border width\"\n",
-    "    assert border.r.describe() == \"Right border width\"\n",
-    "    assert border.b.describe() == \"Bottom border width\"\n",
-    "    assert border.l.describe() == \"Left border width\"\n",
-    "    assert border.x.describe() == \"Horizontal border width\"\n",
-    "    assert border.y.describe() == \"Vertical border width\"\n",
-    "    assert border.s.describe() == \"Start border width (left in LTR)\"\n",
-    "    assert border.e.describe() == \"End border width (right in LTR)\"\n",
-    "    \n",
-    "    # Test border color factory\n",
-    "    assert border_color.describe() == \"Border color utilities for controlling the color of element borders\"\n",
-    "    \n",
-    "    # Test border color directional factories\n",
-    "    assert border_color.t.describe() == \"Top border color\"\n",
-    "    assert border_color.r.describe() == \"Right border color\"\n",
-    "    assert border_color.b.describe() == \"Bottom border color\"\n",
-    "    assert border_color.l.describe() == \"Left border color\"\n",
-    "    assert border_color.x.describe() == \"Horizontal border color\"\n",
-    "    assert border_color.y.describe() == \"Vertical border color\"\n",
-    "    assert border_color.s.describe() == \"Start border color (left in LTR)\"\n",
-    "    assert border_color.e.describe() == \"End border color (right in LTR)\"\n",
-    "    \n",
-    "    # Test divide factory\n",
-    "    assert divide.describe() == \"Divide utilities for adding borders between child elements\"\n",
-    "    assert divide.x.describe() == \"Horizontal divide between children\"\n",
-    "    assert divide.y.describe() == \"Vertical divide between children\"\n",
-    "    assert divide.x_reverse.describe() == \"Reverse the order of horizontal divide\"\n",
-    "    assert divide.y_reverse.describe() == \"Reverse the order of vertical divide\"\n",
-    "    \n",
-    "    # Test divide color factory\n",
-    "    assert divide_color.describe() == \"Divide color utilities for controlling the color of borders between child elements\"\n",
-    "    \n",
-    "    # Test border style factory\n",
-    "    assert border_style.describe() == \"Border style utilities for controlling the style of element borders\"\n",
-    "    \n",
-    "    # Test divide style factory\n",
-    "    assert divide_style.describe() == \"Divide style utilities for controlling the style of borders between child elements\"\n",
-    "    \n",
-    "    # Test outline factories\n",
-    "    assert outline.describe() == \"Outline width utilities for controlling the width of element outlines\"\n",
-    "    assert outline_color.describe() == \"Outline color utilities for controlling the color of element outlines\"\n",
-    "    assert outline_style.describe() == \"Outline style utilities for controlling the style of element outlines\"\n",
-    "    assert outline_hidden.describe() == \"Outline hidden utility that creates a transparent outline with offset\"\n",
-    "    assert outline_offset.describe() == \"Outline offset utilities for controlling the offset of element outlines\"\n",
-    "    \n",
-    "    # Test get_info methods\n",
-    "    rounded_info = rounded.get_info()\n",
-    "    assert 'named_scales' in rounded_info['valid_inputs']\n",
-    "    assert 'special_values' in rounded_info['valid_inputs']\n",
-    "    assert 'variants' in rounded_info\n",
-    "    assert 'directional' in rounded_info['variants']\n",
-    "    assert 'corner_specific' in rounded_info['variants']\n",
-    "    \n",
-    "    border_info = border.get_info()\n",
-    "    assert 'default' in border_info['valid_inputs']\n",
-    "    assert 'numeric_values' in border_info['valid_inputs']\n",
-    "    assert 'directional_variants' in border_info\n",
-    "    \n",
-    "    border_color_info = border_color.get_info()\n",
-    "    assert 'color_families' in border_color_info['valid_inputs']\n",
-    "    assert 'special_colors' in border_color_info['valid_inputs']\n",
-    "    assert 'directional_variants' in border_color_info\n",
-    "    assert 'usage_examples' in border_color_info\n",
-    "    \n",
-    "    divide_info = divide.get_info()\n",
-    "    assert 'default' in divide_info['valid_inputs']\n",
-    "    assert 'numeric_values' in divide_info['valid_inputs']\n",
-    "    assert 'sub_factories' in divide_info\n",
-    "    \n",
-    "    divide_color_info = divide_color.get_info()\n",
-    "    assert 'color_families' in divide_color_info['valid_inputs']\n",
-    "    assert 'special_colors' in divide_color_info['valid_inputs']\n",
-    "    \n",
-    "    # Test style factory info\n",
-    "    border_style_info = border_style.get_info()\n",
-    "    assert 'available_values' in border_style_info['options']\n",
-    "    assert 'solid' in border_style_info['options']['available_values']\n",
-    "    assert 'dashed' in border_style_info['options']['available_values']\n",
-    "    \n",
-    "    divide_style_info = divide_style.get_info()\n",
-    "    assert 'available_values' in divide_style_info['options']\n",
-    "    \n",
-    "    # Test outline factory info\n",
-    "    outline_info = outline.get_info()\n",
-    "    assert 'default' in outline_info['valid_inputs']\n",
-    "    assert 'numeric_values' in outline_info['valid_inputs']\n",
-    "    \n",
-    "    outline_color_info = outline_color.get_info()\n",
-    "    assert 'color_families' in outline_color_info['valid_inputs']\n",
-    "    \n",
-    "    outline_style_info = outline_style.get_info()\n",
-    "    assert 'available_values' in outline_style_info['options']\n",
-    "    \n",
-    "    outline_offset_info = outline_offset.get_info()\n",
-    "    assert 'supports_negative' in outline_offset_info['options']\n",
-    "    assert outline_offset_info['options']['supports_negative'] == True\n",
-    "\n",
-    "# Run the tests\n",
-    "test_borders_factory_documentation()"
-   ]
   },
   {
    "cell_type": "code",
