--- a/nbs/utilities/effects.ipynb
+++ b/nbs/utilities/effects.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Shadow size\n",
     "SHADOW_SIZE_CONFIG = ScaleConfig(\n",
     "    numeric=False,\n",
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "shadow_color = ColoredFactory(\"shadow\", \"Shadow color utilities for customizing the color of box shadows\") # Create shadow color factory using the existing ColoredFactory"
    ]
   },
@@ -326,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Inset shadow size\n",
     "INSET_SHADOW_SIZE_CONFIG = ScaleConfig(\n",
     "    numeric=False,\n",
@@ -362,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "inset_shadow_color = ColoredFactory(\"inset-shadow\", \"Inset shadow color utilities for customizing the color of inner box shadows\") # Create inset shadow color factory using the existing ColoredFactory"
    ]
   },
@@ -529,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Ring width configuration\n",
     "RING_WIDTH_CONFIG = ScaleConfig(\n",
     "    numeric=True,  # Support numeric widths (0, 1, 2, 4, 8, etc.)\n",
@@ -560,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "ring_color = ColoredFactory(\"ring\", \"Ring color utilities for customizing the color of focus rings and outlines\") # Create ring color factory using the existing ColoredFactory"
    ]
   },
@@ -707,7 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Inset ring width configuration (same as ring width)\n",
     "INSET_RING_WIDTH_CONFIG = ScaleConfig(\n",
     "    numeric=True,  # Support numeric widths (0, 1, 2, 4, 8, etc.)\n",
@@ -738,7 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "inset_ring_color = ColoredFactory(\"inset-ring\", \"Inset ring color utilities for customizing the color of inner focus rings and outlines\") # Create inset ring color factory using the existing ColoredFactory"
    ]
   },
@@ -885,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Text shadow size\n",
     "TEXT_SHADOW_SIZE_CONFIG = ScaleConfig(\n",
     "    numeric=False,\n",
@@ -923,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "text_shadow_color = ColoredFactory(\"text-shadow\", \"Text shadow color utilities for customizing the color of text shadows\") # Create text shadow color factory using the existing ColoredFactory"
    ]
   },
@@ -1066,7 +1066,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Opacity configuration - support percentage values (0-100)\n",
     "OPACITY_CONFIG = ScaleConfig(\n",
     "    numeric=True,  # Support numeric values 0-100\n",
@@ -1147,7 +1147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mix_blend = SimpleFactory(\n",
     "    {\n",
     "        \"normal\": \"mix-blend-normal\",\n",
@@ -1223,7 +1223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "bg_blend = SimpleFactory(\n",
     "    {\n",
     "        \"normal\": \"bg-blend-normal\",\n",
@@ -1305,7 +1305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_clip = SimpleFactory(\n",
     "    {\n",
     "        \"border\": \"mask-clip-border\",\n",
@@ -1359,7 +1359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_composite = SimpleFactory(\n",
     "    {\n",
     "        \"add\": \"mask-add\",\n",
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "jkmehepkiae",
+   "id": "99ddc704-de1c-4964-9ad7-84627407c5ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,8 +1667,17 @@
     "                'negative_angles': 'Use negative=True or neg_<angle> syntax',\n",
     "                'from_to_positioning': 'Use mask_linear_from and mask_linear_to for gradient stops'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f62c36aa-510c-4b96-9f47-7cbce89158d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "mask_linear = MaskLinearFactory(\"Linear gradient mask utilities for creating gradient-based masks\") # Create the linear gradient mask factory instance"
    ]
   },
@@ -1849,7 +1858,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create directional mask gradient factories\n",
     "mask_t_from = MaskDirectionalFactory('t', 'from') # Top direction - from\n",
     "mask_t_to = MaskDirectionalFactory('t', 'to') # Top direction - to\n",
@@ -1995,7 +2004,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Radial gradient shape controls\n",
     "mask_circle = SingleValueFactory(\"mask-circle\", \"Set radial gradient mask shape to circle\")\n",
     "mask_ellipse = SingleValueFactory(\"mask-ellipse\", \"Set radial gradient mask shape to ellipse\")\n",
@@ -2100,7 +2109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nlncnuio3hp",
+   "id": "1a9c674a-0941-46dc-a644-145663c27899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,8 +2176,17 @@
     "                'negative_angles': 'Use negative=True or neg_<angle> syntax',\n",
     "                'from_to_positioning': 'Use mask_conic_from and mask_conic_to for gradient stops'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ccd5604-9034-4ebb-a1b3-63ec52889164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create the conic gradient mask factory instance\n",
     "mask_conic = MaskConicFactory(\"Conic gradient mask utilities for creating conical gradient-based masks\")\n",
     "\n",
@@ -2194,7 +2212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_mode = SimpleFactory(\n",
     "    {\n",
     "        \"alpha\": \"mask-alpha\",\n",
@@ -2222,7 +2240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_origin = SimpleFactory(\n",
     "    {\n",
     "        \"border\": \"mask-origin-border\",\n",
@@ -2253,7 +2271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_position = SimpleFactory(\n",
     "    {\n",
     "        \"top_left\": \"mask-top-left\",\n",
@@ -2287,7 +2305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_repeat = SimpleFactory(\n",
     "    {\n",
     "        \"repeat\": \"mask-repeat\",\n",
@@ -2318,7 +2336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_size = SimpleFactory(\n",
     "    {\n",
     "        \"auto\": \"mask-auto\",\n",
@@ -2346,7 +2364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "mask_type = SimpleFactory(\n",
     "    {\n",
     "        \"alpha\": \"mask-type-alpha\",\n",
@@ -3458,46 +3476,6 @@
     "server = start_test_server(app)\n",
     "display(HTMX())\n",
     "server.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aeb0afb9-bb39-4e8a-a81b-a4b1e782c5bb",
-   "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fec3f8e7-c0e1-4b39-98fa-644643418683",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_effects_factory_documentation():\n",
-    "    \"\"\"Test that effect factories have accessible documentation.\"\"\"\n",
-    "    # Test shadow factories\n",
-    "    assert shadow.describe() == \"Box shadow utilities for adding depth to elements\"\n",
-    "    assert shadow_color.describe() == \"Shadow color utilities for customizing the color of box shadows\"\n",
-    "    \n",
-    "    # Test inset shadow factories\n",
-    "    assert inset_shadow.describe() == \"Inset box shadow utilities for adding inner depth to elements\"\n",
-    "    assert inset_shadow_color.describe() == \"Inset shadow color utilities for customizing the color of inner box shadows\"\n",
-    "    \n",
-    "    # Test ring factories\n",
-    "    assert ring.describe() == \"Ring (outline) utilities for adding focus rings and outlines to elements\"\n",
-    "    assert ring_color.describe() == \"Ring color utilities for customizing the color of focus rings and outlines\"\n",
-    "    \n",
-    "    # Test inset ring factories\n",
-    "    assert inset_ring.describe() == \"Inset ring (inner outline) utilities for adding inner focus rings and outlines to elements\"\n",
-    "    assert inset_ring_color.describe() == \"Inset ring color utilities for customizing the color of inner focus rings and outlines\"\n",
-    "\n",
-    "# Run the tests\n",
-    "test_effects_factory_documentation()"
    ]
   },
   {
