--- a/nbs/utilities/filters.ipynb
+++ b/nbs/utilities/filters.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "filter_none = SingleValueFactory(\"filter-none\", \"Remove all filters from an element\") # Remove filters"
    ]
   },
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e0ae79-b980-452e-9a7e-71d1b8ee9b6e",
+   "id": "763c95f4-6528-43bf-bb3c-81b3f3cd3d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,8 +126,17 @@
     "    \n",
     "    def format(self) -> str:\n",
     "        \"\"\"Format as Tailwind class suffix.\"\"\"\n",
-    "        return self.name\n",
-    "\n",
+    "        return self.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42dc887b-2ca8-4c8f-a54e-fd8d63b69849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Blur scale definitions based on Tailwind v4 docs\n",
     "BLUR_SCALES = [\n",
     "    BlurScale(\"xs\", \"4px\", \"--blur-xs\"),\n",
@@ -137,8 +146,17 @@
     "    BlurScale(\"xl\", \"24px\", \"--blur-xl\"),\n",
     "    BlurScale(\"2xl\", \"40px\", \"--blur-2xl\"),\n",
     "    BlurScale(\"3xl\", \"64px\", \"--blur-3xl\"),\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afa168cc-797d-4770-aa89-f21e46dab3a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create blur factory using SimpleFactory for named scales\n",
     "blur = SimpleFactory(\n",
     "    {\n",
@@ -196,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Brightness percentage values (common presets)\n",
     "BRIGHTNESS_VALUES = [0, 50, 75, 90, 95, 100, 105, 110, 125, 150, 200]\n",
     "\n",
@@ -259,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Contrast percentage values (common presets)\n",
     "CONTRAST_VALUES = [0, 50, 75, 100, 125, 150, 200]\n",
     "\n",
@@ -308,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "765ee7e3-2c9e-4ea8-89ca-0612d52a90d7",
+   "id": "791979ab-6afb-41f7-941e-d04c7305e475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,8 +341,17 @@
     "    \n",
     "    def format(self) -> str:\n",
     "        \"\"\"Format as Tailwind class suffix.\"\"\"\n",
-    "        return self.name\n",
-    "\n",
+    "        return self.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da763524-8f10-47ad-b177-aeb81fdc5432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Drop shadow scale definitions based on Tailwind v4 docs\n",
     "DROP_SHADOW_SCALES = [\n",
     "    DropShadowScale(\"xs\", \"0 1px 1px rgb(0 0 0 / 0.05)\", \"--drop-shadow-xs\"),\n",
@@ -333,8 +360,17 @@
     "    DropShadowScale(\"lg\", \"0 4px 4px rgb(0 0 0 / 0.15)\", \"--drop-shadow-lg\"),\n",
     "    DropShadowScale(\"xl\", \"0 9px 7px rgb(0 0 0 / 0.1)\", \"--drop-shadow-xl\"),\n",
     "    DropShadowScale(\"2xl\", \"0 25px 25px rgb(0 0 0 / 0.15)\", \"--drop-shadow-2xl\"),\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7176cf6-ff53-476e-b671-b4df6979abe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create drop shadow factory for basic shadow utilities\n",
     "drop_shadow = SimpleFactory(\n",
     "    {\n",
@@ -347,8 +383,17 @@
     "        \"_2xl\": \"drop-shadow-2xl\"\n",
     "    },\n",
     "    \"Drop shadow filter utilities for applying drop shadow effects to an element\"\n",
-    ") # Drop shadow factory\n",
-    "\n",
+    ") # Drop shadow factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ddac2b-48fc-47df-b0d7-c8fd56569e20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create drop shadow color factory\n",
     "drop_shadow_color = ColoredFactory(\"drop-shadow\", \"Drop shadow color utilities for customizing the color of drop shadows\")"
    ]
@@ -432,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create grayscale factory with percentage support\n",
     "grayscale = ScaledFactory(\"grayscale\", brightness_config, \"Grayscale filter utilities for converting elements to grayscale\")\n",
     "\n",
@@ -486,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Common hue rotation angles\n",
     "HUE_ROTATE_VALUES = [0, 15, 30, 60, 90, 180]\n",
     "\n",
@@ -554,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create invert factory with percentage support\n",
     "invert = ScaledFactory(\"invert\", brightness_config, \"Invert filter utilities for inverting element colors\")\n",
     "\n",
@@ -608,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Common saturation values\n",
     "SATURATE_VALUES = [0, 50, 100, 150, 200]\n",
     "\n",
@@ -661,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create sepia factory with percentage support\n",
     "sepia = ScaledFactory(\"sepia\", brightness_config, \"Sepia filter utilities for applying sepia tone effects\")\n",
     "\n",
@@ -723,7 +768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "backdrop_filter_none = SingleValueFactory(\"backdrop-filter-none\", \"Remove all backdrop filters from an element\") # Remove backdrop filters"
    ]
   },
@@ -742,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create backdrop blur factory using same scales as regular blur\n",
     "backdrop_blur = SimpleFactory(\n",
     "    {\n",
@@ -774,7 +819,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create backdrop filter factories using same configurations as regular filters\n",
     "backdrop_brightness = ScaledFactory(\"backdrop-brightness\", brightness_config, \"Backdrop brightness filter utilities\")\n",
     "backdrop_contrast = ScaledFactory(\"backdrop-contrast\", brightness_config, \"Backdrop contrast filter utilities\")\n",
@@ -805,7 +850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Create backdrop hue rotate with negative support\n",
     "backdrop_hue_rotate = ScaledFactory(\"backdrop-hue-rotate\", hue_rotate_config, \"Backdrop hue rotate filter utilities\")"
    ]
@@ -1075,69 +1120,6 @@
     "server = start_test_server(app)\n",
     "display(HTMX())\n",
     "server.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11ca11e7-0f83-45d0-ad8a-3c41b406efd7",
-   "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94c5b5a5-7e13-47ae-9491-a607cafb6907",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_filters_factory_documentation():\n",
-    "    \"\"\"Test that filter factories have accessible documentation.\"\"\"\n",
-    "    # Test filter control\n",
-    "    assert filter_none.describe() == \"Remove all filters from an element\"\n",
-    "    \n",
-    "    # Test regular filters\n",
-    "    assert blur.describe() == \"Blur filter utilities for applying blur effects to an element\"\n",
-    "    assert brightness.describe() == \"Brightness filter utilities for adjusting element brightness\"\n",
-    "    assert contrast.describe() == \"Contrast filter utilities for adjusting element contrast\"\n",
-    "    assert drop_shadow.describe() == \"Drop shadow filter utilities for applying drop shadow effects to an element\"\n",
-    "    assert drop_shadow_color.describe() == \"Drop shadow color utilities for customizing the color of drop shadows\"\n",
-    "    assert grayscale.describe() == \"Grayscale filter utilities for converting elements to grayscale\"\n",
-    "    assert hue_rotate.describe() == \"Hue rotate filter utilities for rotating element colors\"\n",
-    "    assert invert.describe() == \"Invert filter utilities for inverting element colors\"\n",
-    "    assert saturate.describe() == \"Saturate filter utilities for adjusting element color saturation\"\n",
-    "    assert sepia.describe() == \"Sepia filter utilities for applying sepia tone effects\"\n",
-    "    \n",
-    "    # Test backdrop filters\n",
-    "    assert backdrop_filter_none.describe() == \"Remove all backdrop filters from an element\"\n",
-    "    assert backdrop_blur.describe() == \"Backdrop blur filter utilities for applying blur effects to the backdrop\"\n",
-    "    assert backdrop_brightness.describe() == \"Backdrop brightness filter utilities\"\n",
-    "    assert backdrop_contrast.describe() == \"Backdrop contrast filter utilities\"\n",
-    "    assert backdrop_grayscale.describe() == \"Backdrop grayscale filter utilities\"\n",
-    "    assert backdrop_hue_rotate.describe() == \"Backdrop hue rotate filter utilities\"\n",
-    "    assert backdrop_opacity.describe() == \"Backdrop opacity filter utilities\"\n",
-    "    assert backdrop_saturate.describe() == \"Backdrop saturate filter utilities\"\n",
-    "    assert backdrop_sepia.describe() == \"Backdrop sepia filter utilities\"\n",
-    "    \n",
-    "    # Test get_info methods\n",
-    "    brightness_info = brightness.get_info()\n",
-    "    assert 'description' in brightness_info\n",
-    "    assert 'valid_inputs' in brightness_info\n",
-    "    assert brightness_info['options']['prefix'] == 'brightness'\n",
-    "    \n",
-    "    drop_shadow_info = drop_shadow.get_info()\n",
-    "    assert 'available_values' in drop_shadow_info['options']\n",
-    "    assert 'lg' in drop_shadow_info['options']['available_values']\n",
-    "    \n",
-    "    hue_rotate_info = hue_rotate.get_info()\n",
-    "    assert hue_rotate_info['options']['supports_negative'] == True\n",
-    "\n",
-    "# Run the tests\n",
-    "test_filters_factory_documentation()"
    ]
   },
   {
