--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fgoxsxbvs8",
+   "id": "ea9ab506-1977-46da-b446-1e76d2e1a425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,8 +132,17 @@
     "                    'inline': 'Returns \"inline-grid\" for inline grid containers'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d33714ac-c3ea-4b87-b065-59b060b4e5fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create the display factories\n",
     "flex_display = FlexDisplayFactory() # The flex display factory\n",
     "grid_display = GridDisplayFactory() # The grid display factory"
@@ -184,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "FLEX_BASIS_CONFIG = ScaleConfig( # Create configuration for flex basis - similar to width/height but with container scales\n",
     "    numeric=True,\n",
     "    decimals=True,\n",
@@ -253,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "FLEX_DIRECTION_VALUES = { # Flex direction utilities\n",
     "    \"row\": \"flex-row\",\n",
     "    \"row-reverse\": \"flex-row-reverse\",\n",
@@ -303,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "FLEX_WRAP_VALUES = { # Flex wrap utilities\n",
     "    \"nowrap\": \"flex-nowrap\",\n",
     "    \"wrap\": \"flex-wrap\",\n",
@@ -351,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "FLEX_CONFIG = ScaleConfig( # Flex configuration - supports numeric values and special presets\n",
     "    numeric=True,  # Support flex-1, flex-2, etc.\n",
     "    decimals=False,\n",
@@ -408,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03588029-3e99-4d95-b90c-cce3c2ab5ab4",
+   "id": "71647b75-b2b2-4d43-94da-afcc3385aea5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,8 +456,17 @@
     "        info = super().get_info()\n",
     "        # Add special note about default behavior\n",
     "        info['options']['default_behavior'] = 'Calling grow() without arguments creates grow-1'\n",
-    "        return info\n",
-    "\n",
+    "        return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0807d9b1-bfbc-469e-b102-97a278609bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create flex grow factory\n",
     "grow = GrowFactory() # The flex grow factory"
    ]
@@ -490,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31c4563-a2e3-4c94-8a49-f7fdfd456f49",
+   "id": "e369775e-27f2-4748-b01b-8b42f565c795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,8 +547,17 @@
     "        info = super().get_info()\n",
     "        # Add special note about default behavior\n",
     "        info['options']['default_behavior'] = 'Calling shrink() without arguments creates shrink-1'\n",
-    "        return info\n",
-    "\n",
+    "        return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddea090e-596d-432f-b328-a2581721ac63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create flex shrink factory\n",
     "shrink = ShrinkFactory() # The flex shrink factory"
    ]
@@ -576,7 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "ORDER_CONFIG = ScaleConfig( # Order configuration - supports numeric values including negative\n",
     "    numeric=True,  # Support order-1, order-2, etc.\n",
     "    decimals=False,\n",
@@ -641,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "GRID_COLS_CONFIG = ScaleConfig( # Grid template columns configuration\n",
     "    numeric=True,  # Support grid-cols-1 through grid-cols-12\n",
     "    decimals=False,\n",
@@ -701,7 +728,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "GRID_ROWS_CONFIG = ScaleConfig( # Grid template rows configuration (same as columns)\n",
     "    numeric=True,  # Support grid-rows-1 through grid-rows-12\n",
     "    decimals=False,\n",
@@ -757,11 +784,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c00c325-4391-4cc5-b621-f111e388358f",
+   "id": "126e9484-a538-4aeb-b717-0e90035ac52a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "COL_SPAN_CONFIG = ScaleConfig( # Grid column span configuration\n",
     "    numeric=True,  # Support col-span-1 through col-span-12\n",
     "    decimals=False,\n",
@@ -788,8 +815,17 @@
     "# Create grid column factories\n",
     "col_span = ScaledFactory(\"col-span\", COL_SPAN_CONFIG, \"Column span utilities for controlling how many columns an element spans\") # Column span factory\n",
     "col_start = ScaledFactory(\"col-start\", COL_START_END_CONFIG, \"Column start utilities for controlling where an element starts\") # Column start factory\n",
-    "col_end = ScaledFactory(\"col-end\", COL_START_END_CONFIG, \"Column end utilities for controlling where an element ends\") # Column end factory\n",
-    "\n",
+    "col_end = ScaledFactory(\"col-end\", COL_START_END_CONFIG, \"Column end utilities for controlling where an element ends\") # Column end factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f0180f2-32d3-43bb-8e44-f35d383aaec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "# Special factory for col-auto and arbitrary grid-column values\n",
     "class ColFactory(ScaledFactory):\n",
     "    \"\"\"Special factory for grid-column shorthand.\"\"\"\n",
@@ -820,8 +856,17 @@
     "                    'auto': 'Returns \"col-auto\" for automatic column placement'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c280f10-f1ee-4038-901a-07718d4e7d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "col = ColFactory() # The grid column factory"
    ]
   },
@@ -875,11 +920,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79f827f4-c6de-4a85-ac2f-1c5f0bee0972",
+   "id": "0549c29d-e0ec-4fae-821e-e6232fa325ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "ROW_SPAN_CONFIG = ScaleConfig( # Grid row span configuration (same as column)\n",
     "    numeric=True,  # Support row-span-1 through row-span-12\n",
     "    decimals=False,\n",
@@ -906,8 +951,17 @@
     "# Create grid row factories\n",
     "row_span = ScaledFactory(\"row-span\", ROW_SPAN_CONFIG, \"Row span utilities for controlling how many rows an element spans\") # Row span factory\n",
     "row_start = ScaledFactory(\"row-start\", ROW_START_END_CONFIG, \"Row start utilities for controlling where an element starts\") # Row start factory\n",
-    "row_end = ScaledFactory(\"row-end\", ROW_START_END_CONFIG, \"Row end utilities for controlling where an element ends\") # Row end factory\n",
-    "\n",
+    "row_end = ScaledFactory(\"row-end\", ROW_START_END_CONFIG, \"Row end utilities for controlling where an element ends\") # Row end factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2261373-54c9-4c48-bb07-bfa9983bc60f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "# Special factory for row-auto and arbitrary grid-row values\n",
     "class RowFactory(ScaledFactory):\n",
     "    \"\"\"Special factory for grid-row shorthand.\"\"\"\n",
@@ -938,8 +992,17 @@
     "                    'auto': 'Returns \"row-auto\" for automatic row placement'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17466da1-5bf9-4ee2-9f4d-c04a4c0ca96d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "row = RowFactory() # The grid row factory"
    ]
   },
@@ -997,7 +1060,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "GRID_FLOW_VALUES = { # Grid auto flow utilities\n",
     "    \"row\": \"grid-flow-row\",\n",
     "    \"col\": \"grid-flow-col\",\n",
@@ -1045,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c641d325-c1d3-4041-b40a-187f76b92c7e",
+   "id": "302241a2-ce73-4535-ad01-6ab1f5d38e58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,8 +1125,17 @@
     "    \"min\": \"auto-rows-min\",\n",
     "    \"max\": \"auto-rows-max\",\n",
     "    \"fr\": \"auto-rows-fr\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f929de92-47a3-41d1-82d2-8294a571d3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "# Create auto columns/rows factories with custom value support\n",
     "class AutoColsFactory(SimpleFactory):\n",
     "    \"\"\"Factory for auto-cols with custom value support.\"\"\"\n",
@@ -1093,8 +1165,17 @@
     "            'Arbitrary values: Any CSS grid-auto-columns value (e.g., \"200px\", \"minmax(0, 1fr)\")',\n",
     "            'Custom properties: CSS variables starting with -- (e.g., \"--column-size\")'\n",
     "        ]\n",
-    "        return info\n",
-    "\n",
+    "        return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cec4aa34-a5d4-4bda-b83d-564fbbae373e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "class AutoRowsFactory(SimpleFactory):\n",
     "    \"\"\"Factory for auto-rows with custom value support.\"\"\"\n",
     "    \n",
@@ -1123,8 +1204,17 @@
     "            'Arbitrary values: Any CSS grid-auto-rows value (e.g., \"200px\", \"minmax(0, 1fr)\")',\n",
     "            'Custom properties: CSS variables starting with -- (e.g., \"--row-size\")'\n",
     "        ]\n",
-    "        return info\n",
-    "\n",
+    "        return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a66b91ff-0094-45c4-bf62-1b2fc47819fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create the factories\n",
     "auto_cols = AutoColsFactory() # The auto columns factory\n",
     "auto_rows = AutoRowsFactory() # The auto rows factory"
@@ -1172,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47da88a4-b864-4b23-a099-a1330f2b67cb",
+   "id": "5637ac73-ee6f-4c65-b6c7-08acfeb5b445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,8 +1309,17 @@
     "                    'y': 'Row gap utilities (gap-y-*)'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5479db61-3ee8-4b19-87fc-5447dc3b0851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "gap = GapFactory() # The gap factory\n",
     "\n",
     "# Note: gap.x creates gap-x-* classes (column-gap)\n",
@@ -1273,7 +1372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "JUSTIFY_CONTENT_VALUES = { # Justify content values\n",
     "    \"start\": \"justify-start\",\n",
     "    \"end\": \"justify-end\",\n",
@@ -1317,7 +1416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "JUSTIFY_ITEMS_VALUES = { # Justify items values\n",
     "    \"start\": \"justify-items-start\",\n",
     "    \"end\": \"justify-items-end\",\n",
@@ -1349,7 +1448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "JUSTIFY_SELF_VALUES = { # Justify self values\n",
     "    \"auto\": \"justify-self-auto\",\n",
     "    \"start\": \"justify-self-start\",\n",
@@ -1408,7 +1507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "ALIGN_CONTENT_VALUES = { # Align content values\n",
     "    \"normal\": \"content-normal\",\n",
     "    \"center\": \"content-center\",\n",
@@ -1442,7 +1541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "ALIGN_ITEMS_VALUES = { # Align items values\n",
     "    \"start\": \"items-start\",\n",
     "    \"end\": \"items-end\",\n",
@@ -1475,7 +1574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "ALIGN_SELF_VALUES = { # Align self values\n",
     "    \"auto\": \"self-auto\",\n",
     "    \"start\": \"self-start\",\n",
@@ -1537,7 +1636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "PLACE_CONTENT_VALUES = { # Place content values\n",
     "    \"center\": \"place-content-center\",\n",
     "    \"center-safe\": \"place-content-center-safe\",\n",
@@ -1572,7 +1671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "PLACE_ITEMS_VALUES = { # Place items values\n",
     "    \"start\": \"place-items-start\",\n",
     "    \"end\": \"place-items-end\",\n",
@@ -1604,7 +1703,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "PLACE_SELF_VALUES = { # Place self values\n",
     "    \"auto\": \"place-self-auto\",\n",
     "    \"start\": \"place-self-start\",\n",
@@ -1981,59 +2080,6 @@
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_helper_examples()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5mepqpu4jp5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_flexbox_and_grid_factory_documentation(\n",
-    "):\n",
-    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
-    "    # Test display factory documentation\n",
-    "    assert flex_display.describe() == \"Display utility for creating a flex container\"\n",
-    "    assert grid_display.describe() == \"Display utility for creating a grid container\"\n",
-    "    \n",
-    "    # Test factory documentation\n",
-    "    assert basis.describe() == \"Flex basis utilities for controlling the initial size of flex items\"\n",
-    "    assert flex_direction.describe() == \"Flex direction utilities for controlling the direction of flex items\"\n",
-    "    assert flex_wrap.describe() == \"Flex wrap utilities for controlling how flex items wrap\"\n",
-    "    assert flex.describe() == \"Flex utilities for controlling how flex items both grow and shrink\"\n",
-    "    assert grow.describe() == \"Flex grow utilities for controlling how flex items grow\"\n",
-    "    assert shrink.describe() == \"Flex shrink utilities for controlling how flex items shrink\"\n",
-    "    assert order.describe() == \"Order utilities for controlling the order of flex and grid items\"\n",
-    "    \n",
-    "    # Grid utilities\n",
-    "    assert grid_cols.describe() == \"Grid template columns utilities for specifying the columns in a grid layout\"\n",
-    "    assert grid_rows.describe() == \"Grid template rows utilities for specifying the rows in a grid layout\"\n",
-    "    assert col_span.describe() == \"Column span utilities for controlling how many columns an element spans\"\n",
-    "    assert row_span.describe() == \"Row span utilities for controlling how many rows an element spans\"\n",
-    "    assert grid_flow.describe() == \"Grid auto flow utilities for controlling how elements in a grid are auto-placed\"\n",
-    "    assert auto_cols.describe() == \"Grid auto columns utilities for controlling the size of implicitly-created grid columns\"\n",
-    "    assert auto_rows.describe() == \"Grid auto rows utilities for controlling the size of implicitly-created grid rows\"\n",
-    "    \n",
-    "    # Gap utilities\n",
-    "    assert gap.describe() == \"Gap utilities for controlling gutters between grid and flexbox items\"\n",
-    "    assert gap.x.describe() == \"Column gap utilities for controlling gutters between columns\"\n",
-    "    assert gap.y.describe() == \"Row gap utilities for controlling gutters between rows\"\n",
-    "    \n",
-    "    # Alignment utilities\n",
-    "    assert justify.describe() == \"Justify content utilities for positioning flex/grid items along container's main axis\"\n",
-    "    assert justify_items.describe() == \"Justify items utilities for aligning grid items along their inline axis\"\n",
-    "    assert justify_self.describe() == \"Justify self utilities for aligning individual grid items along their inline axis\"\n",
-    "    assert content.describe() == \"Align content utilities for positioning rows in multi-row flex/grid containers\"\n",
-    "    assert items.describe() == \"Align items utilities for positioning flex/grid items along container's cross axis\"\n",
-    "    assert self_align.describe() == \"Align self utilities for positioning individual flex/grid items along container's cross axis\"\n",
-    "    assert place_content.describe() == \"Place content utilities for aligning content both horizontally and vertically\"\n",
-    "    assert place_items.describe() == \"Place items utilities for aligning items both horizontally and vertically\"\n",
-    "    assert place_self.describe() == \"Place self utilities for aligning individual items both horizontally and vertically\"\n",
-    "\n",
-    "# Run the tests\n",
-    "test_flexbox_and_grid_factory_documentation()"
    ]
   },
   {
