--- a/nbs/utilities/interactivity.ipynb
+++ b/nbs/utilities/interactivity.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "accent = ColoredFactory(\"accent\", \"Accent color utilities for form controls like checkboxes, radio buttons, and range sliders\") # The accent color factory"
    ]
   },
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "appearance = SimpleFactory(\n",
     "    {\n",
     "        \"none\": \"appearance-none\",\n",
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "caret = ColoredFactory(\"caret\", \"Caret color utilities for controlling the color of the text input cursor\") # The caret color factory"
    ]
   },
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "scheme = SimpleFactory(\n",
     "    {\n",
     "        \"normal\": \"scheme-normal\",\n",
@@ -353,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "cursor = CursorFactory(\n",
     "    {\n",
     "        \"auto\": \"cursor-auto\",\n",
@@ -454,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "field_sizing = SimpleFactory(\n",
     "    {\n",
     "        \"fixed\": \"field-sizing-fixed\",\n",
@@ -498,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "pointer_events = SimpleFactory(\n",
     "    {\n",
     "        \"auto\": \"pointer-events-auto\",\n",
@@ -542,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "resize = SimpleFactory(\n",
     "    {\n",
     "        \"none\": \"resize-none\",\n",
@@ -590,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "scroll = SimpleFactory(\n",
     "    {\n",
     "        \"auto\": \"scroll-auto\",\n",
@@ -634,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "scroll_m = DirectionalScaledFactory(\"scroll-m\", SPACING_CONFIG, \"Scroll margin utilities for controlling scroll offset margins\") # The scroll margin factory\n",
     "\n",
     "# Additional directional scroll margin utilities for logical properties\n",
@@ -699,7 +699,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "scroll_p = DirectionalScaledFactory(\"scroll-p\", SPACING_CONFIG, \"Scroll padding utilities for controlling scroll offset padding\") # The scroll padding factory\n",
     "\n",
     "# Additional directional scroll padding utilities for logical properties\n",
@@ -774,7 +774,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "snap_align = SimpleFactory(\n",
     "    {\n",
     "        \"start\": \"snap-start\",\n",
@@ -803,7 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "snap_stop = SimpleFactory(\n",
     "    {\n",
     "        \"normal\": \"snap-normal\",\n",
@@ -830,7 +830,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "snap = SimpleFactory(\n",
     "    {\n",
     "        \"none\": \"snap-none\",\n",
@@ -893,7 +893,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "touch = SimpleFactory(\n",
     "    {\n",
     "        \"auto\": \"touch-auto\",\n",
@@ -953,7 +953,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "select = SimpleFactory(\n",
     "    {\n",
     "        \"none\": \"select-none\",\n",
@@ -1036,7 +1036,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "will_change = WillChangeFactory(\n",
     "    {\n",
     "        \"auto\": \"will-change-auto\",\n",
@@ -1576,70 +1576,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c9649ad-7f53-4868-a1c5-5910d02e2d7f",
-   "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "177dec9f-a5be-46e4-b2b6-bf5fe945d67c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_interactivity_factory_documentation():\n",
-    "    \"\"\"Test that interactivity factories have accessible documentation.\"\"\"\n",
-    "    # Test color factories\n",
-    "    assert accent.describe() == \"Accent color utilities for form controls like checkboxes, radio buttons, and range sliders\"\n",
-    "    assert caret.describe() == \"Caret color utilities for controlling the color of the text input cursor\"\n",
-    "    \n",
-    "    # Test simple factories\n",
-    "    assert appearance.describe() == \"Appearance utilities for suppressing or restoring native form control styling\"\n",
-    "    assert scheme.describe() == \"Color scheme utilities for controlling the preferred color scheme of an element\"\n",
-    "    assert cursor.describe() == \"Cursor utilities for controlling the cursor style when hovering over an element\"\n",
-    "    assert field_sizing.describe() == \"Field sizing utilities for controlling how form controls are sized\"\n",
-    "    assert pointer_events.describe() == \"Pointer events utilities for controlling whether an element responds to pointer events\"\n",
-    "    assert resize.describe() == \"Resize utilities for controlling how an element can be resized\"\n",
-    "    assert scroll.describe() == \"Scroll behavior utilities for controlling smooth scrolling\"\n",
-    "    \n",
-    "    # Test directional factories\n",
-    "    assert scroll_m.describe() == \"Scroll margin utilities for controlling scroll offset margins\"\n",
-    "    assert scroll_p.describe() == \"Scroll padding utilities for controlling scroll offset padding\"\n",
-    "    \n",
-    "    # Test scroll snap factories\n",
-    "    assert snap_align.describe() == \"Scroll snap align utilities for controlling snap position alignment\"\n",
-    "    assert snap_stop.describe() == \"Scroll snap stop utilities for controlling snap stop behavior\"\n",
-    "    assert snap.describe() == \"Scroll snap type utilities for controlling snap container behavior\"\n",
-    "    \n",
-    "    # Test touch and interaction factories\n",
-    "    assert touch.describe() == \"Touch action utilities for controlling touch gestures on touch devices\"\n",
-    "    assert select.describe() == \"User select utilities for controlling text selection behavior\"\n",
-    "    assert will_change.describe() == \"Will-change utilities for optimizing animations by hinting browsers about expected changes\"\n",
-    "    \n",
-    "    # Test get_info methods\n",
-    "    accent_info = accent.get_info()\n",
-    "    assert 'color_families' in accent_info['valid_inputs']\n",
-    "    assert accent_info['options']['supports_opacity'] == True\n",
-    "    \n",
-    "    cursor_info = cursor.get_info()\n",
-    "    assert 'available_values' in cursor_info['options']\n",
-    "    assert 'pointer' in cursor_info['options']['available_values']\n",
-    "    \n",
-    "    scroll_m_info = scroll_m.get_info()\n",
-    "    assert 'directional_variants' in scroll_m_info['options']\n",
-    "    assert scroll_m_info['options']['supports_negative'] == True\n",
-    "\n",
-    "# Run the tests\n",
-    "test_interactivity_factory_documentation()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bedc196d-83c6-43ae-9851-71de75d74c7e",
    "metadata": {},
    "source": [
@@ -1653,7 +1589,31 @@
    "execution_count": null,
    "id": "999c626a-8901-4ae8-bbe4-66e8cd31c621",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```html\n",
+       "<div class=\"grid gap-5\">\n",
+       "<form enctype=\"multipart/form-data\" class=\"scheme-dark p-6 bg-gray-900 rounded-lg\">    <input type=\"checkbox\" class=\"accent-purple-500 scheme-dark cursor-pointer mr-2\">\n",
+       "    <input type=\"text\" class=\"caret-purple-400 appearance-none scheme-dark bg-gray-800 text-white px-3 py-2 rounded-full\">\n",
+       "</form>  <div class=\"pointer-events-auto relative\">\n",
+       "<pre class=\"select-text cursor-text caret-green-400 resize scroll-auto scroll-p-4 font-mono bg-gray-900 text-gray-100 p-4 rounded-full overflow-auto\">def hello():\n",
+       "    print(&#x27;Hello, World!&#x27;)</pre>  </div>\n",
+       "  <div class=\"cursor-pointer will-change-[transform, opacity] touch-manipulation select-none transition-all duration-300 hover:scale-105\">Animated Card</div>\n",
+       "</div>\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "div((form((input((),{'type': 'checkbox', 'class': 'accent-purple-500 scheme-dark cursor-pointer mr-2'}), input((),{'type': 'text', 'class': 'caret-purple-400 appearance-none scheme-dark bg-gray-800 text-white px-3 py-2 rounded-full'})),{'enctype': 'multipart/form-data', 'class': 'scheme-dark p-6 bg-gray-900 rounded-lg'}), div((pre((\"def hello():\\n    print('Hello, World!')\",),{'class': 'select-text cursor-text caret-green-400 resize scroll-auto scroll-p-4 font-mono bg-gray-900 text-gray-100 p-4 rounded-full overflow-auto'}),),{'class': 'pointer-events-auto relative'}), div(('Animated Card',),{'class': 'cursor-pointer will-change-[transform, opacity] touch-manipulation select-none transition-all duration-300 hover:scale-105'})),{'class': 'grid gap-5'})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#|exports\n",
     "def test_interactivity_advanced_fasthtml_examples():\n",
@@ -1666,6 +1626,7 @@
     "    from cjm_fasthtml_tailwind.utilities.layout import position, overflow\n",
     "    from cjm_fasthtml_tailwind.utilities.transforms import scale_tw, transform\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition, duration\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Dark mode form with custom styling\n",
     "    dark_form = Form(\n",
@@ -1733,6 +1694,7 @@
     "    \n",
     "    # Complex interactive element with animation hints\n",
     "    animated_card = Div(\n",
+    "        \"Animated Card\",\n",
     "        cls=combine_classes(\n",
     "            cursor.pointer,\n",
     "            will_change(\"transform, opacity\"),\n",
@@ -1747,8 +1709,74 @@
     "    assert \"will-change-[transform, opacity]\" in animated_card.attrs['class']\n",
     "    assert \"touch-manipulation\" in animated_card.attrs['class']\n",
     "\n",
+    "    # Return all examples in a grid layout\n",
+    "    return Div(\n",
+    "        dark_form,\n",
+    "        code_editor,\n",
+    "        animated_card,\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
+    "    )\n",
+    "\n",
     "# Run the tests\n",
     "test_interactivity_advanced_fasthtml_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7c32ac2-6472-4350-b510-0116c02616ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| output: false\n",
+    "test_func = test_interactivity_advanced_fasthtml_examples\n",
+    "app, rt = create_test_app()\n",
+    "\n",
+    "@rt\n",
+    "def index():\n",
+    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
+    "server = start_test_server(app)\n",
+    "display(HTMX())\n",
+    "server.stop()"
    ]
   },
   {
