--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -44,7 +44,7 @@
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    TailwindScale, combine_classes, StandardUtility, UtilityFactory,\n",
     "    is_numeric_scale, is_fraction, is_custom_property, is_arbitrary_value,\n",
-    "    BaseFactory, SingleValueFactory, SingleValueUtility\n",
+    "    BaseFactory, SingleValueFactory, SingleValueUtility, CONTAINER_SCALES\n",
     ")\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    ScaledFactory, DirectionalScaledFactory, ScaleConfig, INSET_CONFIG,\n",
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "DISPLAY_VALUES = { # Display utilities for general display types (not flex/grid/table)\n",
     "    \"inline\": \"inline\",\n",
     "    \"block\": \"block\", \n",
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "POSITION_VALUES = { # Position utilities\n",
     "    \"static\": \"static\",\n",
     "    \"fixed\": \"fixed\",\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78ee2423-8b62-4ecc-b329-0a5046b461e2",
+   "id": "be202ba4-d9ff-42e7-9fc5-e41cc83c924e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,8 +269,17 @@
     "            'description': self._doc,\n",
     "            'valid_inputs': valid_inputs,\n",
     "            'options': options\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6442c610-f1d0-4917-971d-6b8a24d86c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Inset utilities (top, right, bottom, left)\n",
     "inset = InsetDirectionalFactory(\"inset\", INSET_CONFIG) # The inset factory for positioning\n",
     "\n",
@@ -329,13 +338,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87300f61-bab9-4ce3-8f88-7e7eb053748a",
+   "id": "63a728ea-fb3f-490b-b843-d9281ec6926a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "OVERFLOW_VALUES = [\"auto\", \"hidden\", \"clip\", \"visible\", \"scroll\"] # Overflow values\n",
-    "\n",
+    "#| exports\n",
+    "OVERFLOW_VALUES = [\"auto\", \"hidden\", \"clip\", \"visible\", \"scroll\"] # Overflow values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b98c10-6427-4bb0-9b98-537a2a509a2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "class OverflowFactory(BaseFactory):\n",
     "    \"\"\"Factory for overflow utilities with directional support.\"\"\"\n",
     "    \n",
@@ -387,8 +405,17 @@
     "                },\n",
     "                'supports_modifiers': True\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b719e50b-8026-4f5a-9c91-ef93536bdb7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "overflow = OverflowFactory() # The overflow factory"
    ]
   },
@@ -436,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "Z_INDEX_CONFIG = ScaleConfig( # Z-index configuration\n",
     "    numeric=True,  # Support numeric values 0-50\n",
     "    decimals=False,\n",
@@ -494,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Float utilities\n",
     "FLOAT_VALUES = {\n",
     "    \"right\": \"float-right\",\n",
@@ -524,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Clear utilities\n",
     "CLEAR_VALUES = {\n",
     "    \"left\": \"clear-left\",\n",
@@ -586,7 +613,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Object fit utilities\n",
     "OBJECT_FIT_VALUES = {\n",
     "    \"contain\": \"object-contain\",\n",
@@ -613,11 +640,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "259dcfb0-c078-4ab6-9538-2ad18ed5d2ae",
+   "id": "ce8628be-560d-4131-9363-3f3d7cfa83a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Object position utilities - combines fixed positions with custom value support\n",
     "OBJECT_POSITION_VALUES = {\n",
     "    \"top-left\": \"object-top-left\",\n",
@@ -629,8 +656,17 @@
     "    \"bottom-left\": \"object-bottom-left\",\n",
     "    \"bottom\": \"object-bottom\",\n",
     "    \"bottom-right\": \"object-bottom-right\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f6ebc84-750f-4bc0-b8f9-83740759cd60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced factory that supports both fixed values and custom positions\n",
     "class ObjectPositionFactory(SimpleFactory):\n",
     "    \"\"\"Factory for object position with both fixed and custom values.\"\"\"\n",
@@ -661,8 +697,17 @@
     "                'fixed_positions': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with position string: object_position(\"50% 25%\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c33b5809-04c2-4682-8253-e4097b10eeb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create object position factory\n",
     "object_position = ObjectPositionFactory(\n",
     "    OBJECT_POSITION_VALUES, \n",
@@ -716,7 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Visibility utilities\n",
     "VISIBILITY_VALUES = {\n",
     "    \"visible\": \"visible\",\n",
@@ -745,7 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Box sizing utilities\n",
     "BOX_SIZING_VALUES = {\n",
     "    \"border\": \"box-border\",\n",
@@ -797,7 +842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Isolation utilities\n",
     "ISOLATION_VALUES = {\n",
     "    \"isolate\": \"isolate\",\n",
@@ -821,18 +866,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d038a3-c7b2-4cda-9336-f7eeb093158d",
+   "id": "1bfa55d4-1c85-433f-b2ef-2b37a0acb8f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Aspect ratio utilities - fixed values with custom ratio support\n",
     "ASPECT_RATIO_VALUES = {\n",
     "    \"auto\": \"aspect-auto\",\n",
     "    \"square\": \"aspect-square\",\n",
     "    \"video\": \"aspect-video\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9b26788-ceb3-49ed-a14f-7e0ee64ce081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced factory that supports both fixed values and custom ratios\n",
     "class AspectRatioFactory(SimpleFactory):\n",
     "    \"\"\"Factory for aspect ratio with both fixed and custom values.\"\"\"\n",
@@ -868,8 +922,17 @@
     "                'fixed_ratios': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with ratio: aspect(\"16/9\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "216bde33-c0a1-441b-89f5-dbd8f47076ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create aspect ratio factory\n",
     "aspect = AspectRatioFactory(ASPECT_RATIO_VALUES, \"Aspect ratio utilities for controlling element proportions\") # The aspect ratio factory"
    ]
@@ -914,9 +977,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "from cjm_fasthtml_tailwind.core.base import CONTAINER_SCALES\n",
-    "\n",
+    "#| exports\n",
     "COLUMNS_CONFIG = ScaleConfig( # Columns configuration with container sizes\n",
     "    numeric=True,  # Support columns-1 through columns-12\n",
     "    decimals=False,\n",
@@ -974,11 +1035,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea5c659c-0532-451f-8c4f-ef0336f6ebe4",
+   "id": "2a275b10-0b99-4b4e-9ede-ca003c3d1e30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Break utilities - organized by type\n",
     "BREAK_BEFORE_VALUES = {\n",
     "    \"auto\": \"break-before-auto\",\n",
@@ -1007,8 +1068,17 @@
     "    \"avoid\": \"break-inside-avoid\",\n",
     "    \"avoid-page\": \"break-inside-avoid-page\",\n",
     "    \"avoid-column\": \"break-inside-avoid-column\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f057ccb5-5793-4c32-951e-ea1639df6cbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "# Create break factories with sub-properties\n",
     "class BreakFactory(BaseFactory):\n",
     "    \"\"\"Factory for break utilities with before, after, and inside sub-factories.\"\"\"\n",
@@ -1037,8 +1107,17 @@
     "                'after_values': list(BREAK_AFTER_VALUES.keys()),\n",
     "                'inside_values': list(BREAK_INSIDE_VALUES.keys())\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85d53d12-d5bd-4c1c-bf15-b2219591416a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create the break factory\n",
     "break_util = BreakFactory() # The break factory"
    ]
@@ -1060,7 +1139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Box decoration break utilities\n",
     "BOX_DECORATION_VALUES = {\n",
     "    \"clone\": \"box-decoration-clone\",\n",
@@ -1087,14 +1166,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50098a37-a211-4874-870b-4f5841668371",
+   "id": "0d7a4914-4bcc-453f-8a86-d9ede9f3cc63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
+    "# Overscroll behavior values\n",
+    "OVERSCROLL_VALUES = [\"auto\", \"contain\", \"none\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10a0ea97-6a45-462b-bd2f-fb81c221fc8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Overscroll behavior values\n",
-    "OVERSCROLL_VALUES = [\"auto\", \"contain\", \"none\"]\n",
-    "\n",
     "class OverscrollFactory(BaseFactory):\n",
     "    \"\"\"Factory for overscroll behavior utilities with directional support.\"\"\"\n",
     "    \n",
@@ -1135,8 +1223,17 @@
     "                    'y': 'vertical overscroll behavior'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e10bade-99bc-4e60-9193-f6b527604676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "# Create the overscroll factory\n",
     "overscroll = OverscrollFactory() # The overscroll factory"
    ]
@@ -1574,40 +1671,6 @@
     "\n",
     "# Run the tests\n",
     "test_layout_modifier_examples()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "li95e4biwp8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_layout_factory_documentation(\n",
-    "):\n",
-    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
-    "    # Test factory documentation\n",
-    "    assert display_tw.describe() == \"Display utilities for controlling the display box type of an element\"\n",
-    "    assert position.describe() == \"Position utilities for controlling how an element is positioned in the document\"\n",
-    "    assert inset.describe() == \"Inset utilities for controlling the placement of positioned elements\"\n",
-    "    assert overflow.describe() == \"Overflow utilities for controlling how an element handles content that is too large\"\n",
-    "    assert z.describe() == \"Z-index utilities for controlling the stack order of an element\"\n",
-    "    assert float_tw.describe() == \"Float utilities for controlling the wrapping of content around an element\"\n",
-    "    assert clear.describe() == \"Clear utilities for controlling wrapping behavior after floating elements\"\n",
-    "    assert object_fit.describe() == \"Object fit utilities for controlling how replaced element content should be resized\"\n",
-    "    assert object_position.describe() == \"Object position utilities for controlling content positioning within its container\"\n",
-    "    assert visibility.describe() == \"Visibility utilities for controlling the visibility of an element\"\n",
-    "    assert box.describe() == \"Box sizing utilities for controlling how the browser calculates element size\"\n",
-    "    assert isolation.describe() == \"Isolation utilities for creating a new stacking context\"\n",
-    "    assert aspect.describe() == \"Aspect ratio utilities for controlling element proportions\"\n",
-    "    assert columns.describe() == \"Columns utilities for controlling the number of columns within an element\"\n",
-    "    assert break_util.describe() == \"Break utilities for controlling column and page breaks\"\n",
-    "    assert box_decoration.describe() == \"Box decoration break utilities for controlling element fragment rendering across breaks\"\n",
-    "    assert overscroll.describe() == \"Overscroll behavior utilities for controlling browser behavior at scroll boundaries\"\n",
-    "\n",
-    "# Run the tests\n",
-    "test_layout_factory_documentation()"
    ]
   },
   {
