--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "w = ScaledFactory(\"w\", SIZE_CONFIG, \"Width utilities for setting element width\") # The width factory"
    ]
   },
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "h = ScaledFactory(\"h\", SIZE_CONFIG, \"Height utilities for setting element height\") # The height factory"
    ]
   },
@@ -338,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "min_w = ScaledFactory(\"min-w\", SIZE_CONFIG, \"Minimum width utilities for setting minimum element width\") # The min-width factory"
    ]
   },
@@ -392,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "max_w = ScaledFactory(\"max-w\", SIZE_CONFIG, \"Maximum width utilities for setting maximum element width\") # The max-width factory"
    ]
   },
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Container utility\n",
     "container = SingleValueFactory(\n",
     "    \"container\",\n",
@@ -488,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "min_h = ScaledFactory(\"min-h\", SIZE_CONFIG, \"Minimum height utilities for setting minimum element height\") # The min-height factory"
    ]
   },
@@ -538,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "max_h = ScaledFactory(\"max-h\", SIZE_CONFIG, \"Maximum height utilities for setting maximum element height\") # The max-height factory"
    ]
   },
@@ -559,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "size_util = ScaledFactory(\"size\", SIZE_CONFIG, \"Size utilities for setting both width and height simultaneously\") # The size factory (sets both width and height)"
    ]
   },
@@ -812,31 +812,6 @@
     "server = start_test_server(app)\n",
     "display(HTMX())\n",
     "server.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "jlwvvk024og",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_sizing_factory_documentation(\n",
-    "):\n",
-    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
-    "    # Test factory documentation\n",
-    "    assert w.describe() == \"Width utilities for setting element width\"\n",
-    "    assert h.describe() == \"Height utilities for setting element height\"\n",
-    "    assert min_w.describe() == \"Minimum width utilities for setting minimum element width\"\n",
-    "    assert max_w.describe() == \"Maximum width utilities for setting maximum element width\"\n",
-    "    assert min_h.describe() == \"Minimum height utilities for setting minimum element height\"\n",
-    "    assert max_h.describe() == \"Maximum height utilities for setting maximum element height\"\n",
-    "    assert size_util.describe() == \"Size utilities for setting both width and height simultaneously\"\n",
-    "    assert container.describe() == \"Responsive container with breakpoint-based max-widths\"\n",
-    "\n",
-    "# Run the tests\n",
-    "test_sizing_factory_documentation()"
    ]
   },
   {
