--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "#| export\n",
     "from typing import Optional, Union, Dict, Any\n",
-    "from cjm_fasthtml_tailwind.core.base import TailwindScale, combine_classes\n",
+    "from cjm_fasthtml_tailwind.core.base import TailwindScale, combine_classes, BaseFactory, SingleValueFactory, SingleValueUtility\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    DirectionalScaledFactory, ScaledFactory, SPACING_CONFIG\n",
     ")\n",
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "p = DirectionalScaledFactory(\"p\", SPACING_CONFIG, \"Padding utilities for controlling element padding\") # The padding factory\n",
     "\n",
     "# Additional directional padding utilities for logical properties\n",
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "m = DirectionalScaledFactory(\"m\", SPACING_CONFIG, \"Margin utilities for controlling element margin\") # The margin factory\n",
     "\n",
     "# Additional directional margin utilities for logical properties\n",
@@ -358,13 +358,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc11291-9c33-435f-b29a-d6371c68f3a4",
+   "id": "6a5cf1f4-1db5-4e02-9925-3e643d8a576a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "from cjm_fasthtml_tailwind.core.base import BaseFactory, SingleValueFactory, SingleValueUtility\n",
-    "\n",
     "# Create space between factories\n",
     "# Note: space utilities use a hyphenated prefix pattern\n",
     "class SpaceFactory(BaseFactory):\n",
@@ -393,8 +391,17 @@
     "                    'y_reverse': 'Reverse vertical spacing order'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9668e010-b3ea-4f7d-8853-63ebecec13ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
     "space = SpaceFactory() # The space factory"
    ]
   },
@@ -791,48 +798,6 @@
     "\n",
     "# Run the tests\n",
     "test_spacing_enhanced_factory_examples()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bw0lktq11pl",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_spacing_factory_documentation(\n",
-    "):\n",
-    "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
-    "    # Test main factory documentation\n",
-    "    assert p.describe() == \"Padding utilities for controlling element padding\"\n",
-    "    assert m.describe() == \"Margin utilities for controlling element margin\"\n",
-    "    assert ps.describe() == \"Padding inline-start utilities (logical property)\"\n",
-    "    assert pe.describe() == \"Padding inline-end utilities (logical property)\"\n",
-    "    assert ms.describe() == \"Margin inline-start utilities (logical property)\"\n",
-    "    assert me.describe() == \"Margin inline-end utilities (logical property)\"\n",
-    "    \n",
-    "    # Test space factory documentation\n",
-    "    assert space.describe() == \"Space utilities for adding consistent spacing between child elements\"\n",
-    "    assert space.x.describe() == \"Horizontal spacing between child elements\"\n",
-    "    assert space.y.describe() == \"Vertical spacing between child elements\"\n",
-    "    assert space.x_reverse.describe() == \"Reverse the order of horizontal spacing\"\n",
-    "    assert space.y_reverse.describe() == \"Reverse the order of vertical spacing\"\n",
-    "    \n",
-    "    # Test directional sub-factories\n",
-    "    assert p.t.describe() == \"Top p utilities\"\n",
-    "    assert p.r.describe() == \"Right p utilities\"\n",
-    "    assert p.b.describe() == \"Bottom p utilities\"\n",
-    "    assert p.l.describe() == \"Left p utilities\"\n",
-    "    assert p.x.describe() == \"Horizontal p utilities\"\n",
-    "    assert p.y.describe() == \"Vertical p utilities\"\n",
-    "    \n",
-    "    # Verify space reverse utilities work correctly\n",
-    "    assert str(space.x_reverse) == \"space-x-reverse\"\n",
-    "    assert str(space.y_reverse) == \"space-y-reverse\"\n",
-    "\n",
-    "# Run the tests\n",
-    "test_spacing_factory_documentation()"
    ]
   },
   {
