--- a/nbs/utilities/svg.ipynb
+++ b/nbs/utilities/svg.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "fill_none = SingleValueFactory(\"fill-none\", \"Remove fill from an element\") # Remove fill"
    ]
   },
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "fill = ColoredFactory(\"fill\", \"Fill color utilities for styling the fill of SVG elements\") # The fill color factory"
    ]
   },
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "stroke_none = SingleValueFactory(\"stroke-none\", \"Remove stroke from an element\") # Remove stroke"
    ]
   },
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "stroke = ColoredFactory(\"stroke\", \"Stroke color utilities for styling the stroke of SVG elements\") # The stroke color factory"
    ]
   },
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55b2662-e449-48d0-a9b2-61621cc9bf33",
+   "id": "285f9f05-cd84-4dfd-8bb8-7cad92d3ef05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,8 +366,17 @@
     "    named=None,\n",
     "    special=None,\n",
     "    negative=False\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7515ee5-c58b-48ca-8eb6-31fbcb1777d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Create a custom stroke width factory that only supports values 0-2\n",
     "class StrokeWidthFactory(ScaledFactory):\n",
     "    \"\"\"Factory for stroke-width utilities with restricted numeric scale (0-2).\"\"\"\n",
@@ -424,8 +433,17 @@
     "                'prefix': self.prefix,\n",
     "                'default_values': self._valid_values\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb541523-fd31-406c-96db-58831533d504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "stroke_width = StrokeWidthFactory() # The stroke width factory"
    ]
   },
@@ -1020,54 +1038,6 @@
     "server = start_test_server(app)\n",
     "display(HTMX())\n",
     "server.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c43bd560-f4b6-4ba3-836e-ef2c1675c946",
-   "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bfbe5f7-aeff-4904-a6e7-1effdd9a8a29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_svg_factory_documentation():\n",
-    "    \"\"\"Test that SVG factories have accessible documentation.\"\"\"\n",
-    "    # Test fill factory\n",
-    "    assert fill.describe() == \"Fill color utilities for styling the fill of SVG elements\"\n",
-    "    fill_info = fill.get_info()\n",
-    "    assert 'color_families' in fill_info['valid_inputs']\n",
-    "    assert 'shades' in fill_info['valid_inputs']\n",
-    "    assert fill_info['options']['prefix'] == 'fill'\n",
-    "    assert fill_info['options']['supports_opacity'] == True\n",
-    "    \n",
-    "    # Test stroke factory\n",
-    "    assert stroke.describe() == \"Stroke color utilities for styling the stroke of SVG elements\"\n",
-    "    stroke_info = stroke.get_info()\n",
-    "    assert 'color_families' in stroke_info['valid_inputs']\n",
-    "    assert 'shades' in stroke_info['valid_inputs']\n",
-    "    assert stroke_info['options']['prefix'] == 'stroke'\n",
-    "    assert stroke_info['options']['supports_opacity'] == True\n",
-    "    \n",
-    "    # Test stroke width factory\n",
-    "    assert stroke_width.describe() == \"Stroke width utilities for styling the stroke width of SVG elements\"\n",
-    "    sw_info = stroke_width.get_info()\n",
-    "    assert 'Numeric values: 0, 1, 2' in sw_info['valid_inputs']\n",
-    "    assert 'Arbitrary values:' in sw_info['valid_inputs'][1]\n",
-    "    assert sw_info['options']['prefix'] == 'stroke'\n",
-    "    assert sw_info['options']['default_values'] == [0, 1, 2]\n",
-    "\n",
-    "# Run the tests\n",
-    "test_svg_factory_documentation()"
    ]
   },
   {
