--- a/nbs/utilities/tables.ipynb
+++ b/nbs/utilities/tables.ipynb
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hwqwd5by1ea",
+   "id": "a108437e-30d1-4531-8a4b-16cea8617bc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +164,17 @@
     "                    'row': 'Returns \"table-row\" for table row display'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a24af46-4f96-4c86-bdd8-ceb44b6b5af1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create the table display factory\n",
     "table_display = TableDisplayFactory() # The table display factory"
    ]
@@ -219,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "border_collapse = SimpleFactory(\n",
     "    {\n",
     "        \"collapse\": \"border-collapse\",\n",
@@ -259,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4409eca-7c1c-4663-968f-23732c6b3a86",
+   "id": "6b10370c-f99e-4ddd-90aa-f9a975d01a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +318,17 @@
     "                    'y': 'vertical spacing'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f939ce6-ea82-47bd-bbfc-534a9766490c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "border_spacing = BorderSpacingFactory() # The border spacing factory"
    ]
   },
@@ -432,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "table_layout = SimpleFactory(\n",
     "    {\n",
     "        \"auto\": \"table-auto\",\n",
@@ -476,7 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "caption_side = SimpleFactory(\n",
     "    {\n",
     "        \"top\": \"caption-top\",\n",
@@ -1132,71 +1150,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7b642b80-e03b-40b5-b90a-86ba0ea5bf14",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9929f408-ff14-4b3d-bd95-f0ce2644c036",
    "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d4f3a6-381f-4df0-80c3-1a0efced5d1c",
+   "id": "8857f33f-13c9-43f2-80bc-28bc2513d314",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_tables_factory_documentation():\n",
-    "    \"\"\"Test that table factories have accessible documentation.\"\"\"\n",
-    "    # Test table display factory\n",
-    "    assert table_display.describe() == \"Display utility for creating a table element\"\n",
-    "    \n",
-    "    # Test border collapse factory\n",
-    "    assert border_collapse.describe() == \"Border collapse utilities for controlling whether table borders should collapse or be separated\"\n",
-    "    \n",
-    "    # Test border spacing factory\n",
-    "    assert border_spacing.describe() == \"Border spacing utilities for controlling the spacing between table borders\"\n",
-    "    \n",
-    "    # Test table layout factory\n",
-    "    assert table_layout.describe() == \"Table layout utilities for controlling the table layout algorithm\"\n",
-    "    \n",
-    "    # Test caption side factory\n",
-    "    assert caption_side.describe() == \"Caption side utilities for controlling the alignment of a caption element inside of a table\"\n",
-    "    \n",
-    "    # Test get_info methods\n",
-    "    display_info = table_display.get_info()\n",
-    "    assert 'inline' in display_info['options']['special_properties']\n",
-    "    assert 'caption' in display_info['options']['special_properties']\n",
-    "    assert 'cell' in display_info['options']['special_properties']\n",
-    "    \n",
-    "    collapse_info = border_collapse.get_info()\n",
-    "    assert 'collapse' in collapse_info['options']['available_values']\n",
-    "    assert 'separate' in collapse_info['options']['available_values']\n",
-    "    \n",
-    "    spacing_info = border_spacing.get_info()\n",
-    "    assert 'Numeric scales: 0-96' in spacing_info['valid_inputs'][0]\n",
-    "    assert 'directional_variants' in spacing_info['options']\n",
-    "    assert spacing_info['options']['directional_variants']['x'] == 'horizontal spacing'\n",
-    "    assert spacing_info['options']['directional_variants']['y'] == 'vertical spacing'\n",
-    "    \n",
-    "    layout_info = table_layout.get_info()\n",
-    "    assert 'auto' in layout_info['options']['available_values']\n",
-    "    assert 'fixed' in layout_info['options']['available_values']\n",
-    "    \n",
-    "    caption_info = caption_side.get_info()\n",
-    "    assert 'top' in caption_info['options']['available_values']\n",
-    "    assert 'bottom' in caption_info['options']['available_values']\n",
-    "    \n",
-    "    # Test directional sub-factories for border spacing\n",
-    "    assert border_spacing.x.describe() == \"Horizontal border spacing\"\n",
-    "    assert border_spacing.y.describe() == \"Vertical border spacing\"\n",
-    "\n",
-    "# Run the tests\n",
-    "test_tables_factory_documentation()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
