--- a/nbs/utilities/transforms.ipynb
+++ b/nbs/utilities/transforms.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Backface visibility utilities\n",
     "BACKFACE_VALUES = {\n",
     "    \"hidden\": \"backface-hidden\",\n",
@@ -115,11 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "786534b5-800b-46db-aa21-38faec0e0d48",
+   "id": "22aeed80-3a54-43c2-8e00-f031fd3cf7e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Perspective named scales\n",
     "PERSPECTIVE_VALUES = {\n",
     "    \"dramatic\": \"perspective-dramatic\",\n",
@@ -128,8 +128,17 @@
     "    \"midrange\": \"perspective-midrange\",\n",
     "    \"distant\": \"perspective-distant\",\n",
     "    \"none\": \"perspective-none\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5525519-9c95-4a76-ab28-3e80ec169fd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced factory that supports both named values and custom perspectives\n",
     "class PerspectiveFactory(SimpleFactory):\n",
     "    \"\"\"Factory for perspective with both named and custom values.\"\"\"\n",
@@ -167,8 +176,17 @@
     "                },\n",
     "                'custom_usage': 'Call factory with value: perspective(\"500px\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad653a8a-00db-488e-a137-f390e99cd33f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "perspective = PerspectiveFactory(PERSPECTIVE_VALUES, \"Perspective utilities for controlling an element's perspective when placed in 3D space\") # The perspective factory"
    ]
   },
@@ -212,11 +230,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "388ee274-b9c1-49c6-adae-508cce7cfd21",
+   "id": "bb904839-4e55-4985-971e-b768fe6b2a27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Perspective origin positions - combines fixed positions with custom value support\n",
     "PERSPECTIVE_ORIGIN_VALUES = {\n",
     "    \"center\": \"perspective-origin-center\",\n",
@@ -228,8 +246,17 @@
     "    \"bottom-left\": \"perspective-origin-bottom-left\",\n",
     "    \"left\": \"perspective-origin-left\",\n",
     "    \"top-left\": \"perspective-origin-top-left\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69e3d8a2-e5b2-47e7-b527-ed6967d1cddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced factory that supports both fixed values and custom positions\n",
     "class PerspectiveOriginFactory(SimpleFactory):\n",
     "    \"\"\"Factory for perspective origin with both fixed and custom values.\"\"\"\n",
@@ -260,8 +287,17 @@
     "                'fixed_positions': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with position string: perspective_origin(\"50% 25%\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40c03bcd-3858-4035-8b01-1f74dc54ef4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "perspective_origin = PerspectiveOriginFactory(\n",
     "    PERSPECTIVE_ORIGIN_VALUES, \n",
     "    \"Perspective origin utilities for controlling an element's perspective origin when placed in 3D space\"\n",
@@ -306,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec695439-89f0-431c-884d-e709bb4a32b0",
+   "id": "5c2d6a32-616f-459b-90a4-65500e174eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,8 +358,17 @@
     "    named=None,\n",
     "    special={\"none\": \"none\"},\n",
     "    negative=True  # Support negative rotations\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "215ae315-8797-4398-a231-6bfbf654e9a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Custom utility for rotate that handles angles\n",
     "class RotateUtility(StandardUtility):\n",
     "    \"\"\"Utility class for rotation with angle support.\"\"\"\n",
@@ -340,8 +385,17 @@
     "            return str(value)\n",
     "        else:\n",
     "            # Treat as arbitrary value if not in predefined angles\n",
-    "            return f\"[{value}]\"\n",
-    "\n",
+    "            return f\"[{value}]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acb35d9c-ca01-41dd-8a18-892e33288ff2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Factory for rotate with directional support\n",
     "class RotateFactory(BaseFactory):\n",
     "    \"\"\"Factory for rotation utilities with directional support.\"\"\"\n",
@@ -397,8 +451,17 @@
     "                    'z': 'Rotate around Z axis'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee40d176-02a5-4c04-ac41-8ef5b8a6261e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Negative rotate factory\n",
     "class NegativeRotateFactory:\n",
     "    \"\"\"Factory for negative rotation utilities.\"\"\"\n",
@@ -417,8 +480,17 @@
     "                instance = RotateUtility(\"-rotate\")\n",
     "                instance._value = angle\n",
     "                return instance\n",
-    "        raise AttributeError(f\"'NegativeRotateFactory' object has no attribute '{name}'\")\n",
-    "\n",
+    "        raise AttributeError(f\"'NegativeRotateFactory' object has no attribute '{name}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0974ee6-ca82-40bc-b36b-57d811a1c8dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "rotate = RotateFactory() # The rotate factory"
    ]
   },
@@ -473,11 +545,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eab59b3e-2c1d-4a59-a82c-026da1e33f5c",
+   "id": "103002a9-44e0-4162-b0ed-cac83f8e717b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Scale percentage values\n",
     "SCALE_VALUES = [0, 50, 75, 90, 95, 100, 105, 110, 125, 150] # Common scale percentages\n",
     "\n",
@@ -489,8 +561,17 @@
     "    named=None,\n",
     "    special={\"none\": \"none\"},\n",
     "    negative=True  # Support negative scaling (flip)\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beb6d2e2-8082-4502-8752-a9c2b6ced2dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Custom utility for scale that handles percentages\n",
     "class ScaleUtility(StandardUtility):\n",
     "    \"\"\"Utility class for scaling with percentage support.\"\"\"\n",
@@ -507,8 +588,17 @@
     "            return str(value)\n",
     "        else:\n",
     "            # Treat as arbitrary value if not in predefined scales\n",
-    "            return f\"[{value}]\"\n",
-    "\n",
+    "            return f\"[{value}]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5a9c4ce-bd8f-451a-add5-820f76a3f1e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Factory for scale with directional support\n",
     "class ScaleFactory(BaseFactory):\n",
     "    \"\"\"Factory for scale utilities with directional and 3D support.\"\"\"\n",
@@ -616,8 +706,17 @@
     "                    '_3d': 'Apply 3D scaling'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26cb7074-f491-480b-a0ce-7e3c86c19755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Negative scale factory\n",
     "class NegativeScaleFactory:\n",
     "    \"\"\"Factory for negative scale utilities.\"\"\"\n",
@@ -636,8 +735,17 @@
     "                instance = ScaleUtility(\"-scale\")\n",
     "                instance._value = scale\n",
     "                return instance\n",
-    "        raise AttributeError(f\"'NegativeScaleFactory' object has no attribute '{name}'\")\n",
-    "\n",
+    "        raise AttributeError(f\"'NegativeScaleFactory' object has no attribute '{name}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eee6ca14-f095-4106-9cce-1fa5e917263d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "scale_tw = ScaleFactory() # The scale factory (renamed to avoid conflict with built-in scale)"
    ]
   },
@@ -695,14 +803,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe139d0-d932-4202-ac64-ab299c48acd4",
+   "id": "77b7e249-6466-40bc-a9d9-d7d5f736886e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Skew angle values\n",
-    "SKEW_ANGLES = [0, 1, 2, 3, 6, 12] # Common skew angles in degrees\n",
-    "\n",
+    "SKEW_ANGLES = [0, 1, 2, 3, 6, 12] # Common skew angles in degrees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "993ab7f6-3771-416d-b892-0f9ac33bcf6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Custom utility for skew that handles angles\n",
     "class SkewUtility(StandardUtility):\n",
     "    \"\"\"Utility class for skewing with angle support.\"\"\"\n",
@@ -717,8 +834,17 @@
     "            return str(value)\n",
     "        else:\n",
     "            # Treat as arbitrary value if not in predefined angles\n",
-    "            return f\"[{value}]\"\n",
-    "\n",
+    "            return f\"[{value}]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa0ad9aa-17ee-4ff0-9a95-f13e6e365b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Factory for skew with directional support\n",
     "class SkewFactory(BaseFactory):\n",
     "    \"\"\"Factory for skew utilities with directional support.\"\"\"\n",
@@ -803,8 +929,17 @@
     "                    'y': 'Skew Y axis'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cd72f14-7563-4317-8149-a603f8d220d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Negative skew factory\n",
     "class NegativeSkewFactory:\n",
     "    \"\"\"Factory for negative skew utilities.\"\"\"\n",
@@ -823,8 +958,17 @@
     "                instance = SkewUtility(\"-skew\")\n",
     "                instance._value = angle\n",
     "                return instance\n",
-    "        raise AttributeError(f\"'NegativeSkewFactory' object has no attribute '{name}'\")\n",
-    "\n",
+    "        raise AttributeError(f\"'NegativeSkewFactory' object has no attribute '{name}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38e90bfc-d0b0-4057-9ff3-b36a933c8e5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "skew = SkewFactory() # The skew factory"
    ]
   },
@@ -879,18 +1023,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8eb8cd2-79a6-4de1-b196-a6dba9cd7a60",
+   "id": "70491dd6-590c-4fe8-a430-40a1ab608573",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Transform utilities\n",
     "TRANSFORM_VALUES = {\n",
     "    \"none\": \"transform-none\",\n",
     "    \"gpu\": \"transform-gpu\",\n",
     "    \"cpu\": \"transform-cpu\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e5982e4-38c4-460f-9578-4543986ea700",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced factory that supports both special values and custom transforms\n",
     "class TransformFactory(SimpleFactory):\n",
     "    \"\"\"Factory for transform utilities with special and custom values.\"\"\"\n",
@@ -921,8 +1074,17 @@
     "                'special_values': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with transform: transform(\"rotate(45deg) scale(1.5)\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c31071cb-af4e-4842-aaa8-d17cea89b692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "transform = TransformFactory(TRANSFORM_VALUES, \"Transform utilities for transforming elements\") # The transform factory"
    ]
   },
@@ -962,11 +1124,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a48fc8-fc40-4073-b888-fedf507d98dd",
+   "id": "e30579c2-b838-48e7-be84-f372cd27159a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Transform origin positions - combines fixed positions with custom value support\n",
     "TRANSFORM_ORIGIN_VALUES = {\n",
     "    \"center\": \"origin-center\",\n",
@@ -978,8 +1140,17 @@
     "    \"bottom-left\": \"origin-bottom-left\",\n",
     "    \"left\": \"origin-left\",\n",
     "    \"top-left\": \"origin-top-left\"\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9114e368-9092-443f-b875-c4d54e2c927e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced factory that supports both fixed values and custom positions\n",
     "class TransformOriginFactory(SimpleFactory):\n",
     "    \"\"\"Factory for transform origin with both fixed and custom values.\"\"\"\n",
@@ -1010,8 +1181,17 @@
     "                'fixed_positions': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with position string: origin(\"50% 25%\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "553aab3f-dbd4-49c4-9dfe-35c9c768d40c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "origin = TransformOriginFactory(\n",
     "    TRANSFORM_ORIGIN_VALUES, \n",
     "    \"Transform origin utilities for specifying the origin for an element's transformations\"\n",
@@ -1060,7 +1240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Transform style utilities\n",
     "TRANSFORM_STYLE_VALUES = {\n",
     "    \"_3d\": \"transform-3d\",\n",
@@ -1100,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "445d20ac-d42d-45d3-97f2-6538103b6418",
+   "id": "09c7b57e-09b5-44ef-9866-e0f850ed70e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,8 +1297,17 @@
     "        \"none\": \"none\"\n",
     "    },\n",
     "    negative=True  # Support negative translations\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c98fbb-f7db-4e8b-81d1-f140931f2ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Factory for translate with directional support\n",
     "class TranslateFactory(BaseFactory):\n",
     "    \"\"\"Factory for translate utilities with directional and 3D support.\"\"\"\n",
@@ -1167,8 +1356,17 @@
     "                    'z': 'Translate along Z axis'\n",
     "                }\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5cc661d-5b51-4bf5-bf7a-0319e3409364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "translate = TranslateFactory() # The translate factory"
    ]
   },
@@ -1549,49 +1747,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed5cfc90-34db-4086-a683-4803f4d50cf3",
+   "id": "bfc1fbfd-0587-42e6-aba0-b9cbd34cef71",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_transforms_factory_documentation():\n",
-    "    \"\"\"Test that transform factories have accessible documentation.\"\"\"\n",
-    "    # Test main factory documentation\n",
-    "    assert backface.describe() == \"Backface visibility utilities for controlling if an element's backface is visible\"\n",
-    "    assert perspective.describe() == \"Perspective utilities for controlling an element's perspective when placed in 3D space\"\n",
-    "    assert perspective_origin.describe() == \"Perspective origin utilities for controlling an element's perspective origin when placed in 3D space\"\n",
-    "    assert rotate.describe() == \"Rotate utilities for rotating elements\"\n",
-    "    assert scale_tw.describe() == \"Scale utilities for scaling elements\"\n",
-    "    assert skew.describe() == \"Skew utilities for skewing elements with transform\"\n",
-    "    assert transform.describe() == \"Transform utilities for transforming elements\"\n",
-    "    assert origin.describe() == \"Transform origin utilities for specifying the origin for an element's transformations\"\n",
-    "    assert transform_style.describe() == \"Transform style utilities for controlling if an element's children are placed in 3D space\"\n",
-    "    assert translate.describe() == \"Translate utilities for translating elements\"\n",
-    "    \n",
-    "    # Test directional sub-factories\n",
-    "    assert rotate.x.describe() == \"Rotate around X axis\"\n",
-    "    assert rotate.y.describe() == \"Rotate around Y axis\"\n",
-    "    assert rotate.z.describe() == \"Rotate around Z axis\"\n",
-    "    assert translate.x.describe() == \"Translate along X axis\"\n",
-    "    assert translate.y.describe() == \"Translate along Y axis\"\n",
-    "    assert translate.z.describe() == \"Translate along Z axis\"\n",
-    "    \n",
-    "    # Test get_info methods\n",
-    "    perspective_info = perspective.get_info()\n",
-    "    assert 'named_perspectives' in perspective_info['options']\n",
-    "    assert 'dramatic' in perspective_info['options']['named_perspectives']\n",
-    "    \n",
-    "    rotate_info = rotate.get_info()\n",
-    "    assert 'supports_negative' in rotate_info['options']\n",
-    "    assert rotate_info['options']['supports_negative'] == True\n",
-    "    \n",
-    "    translate_info = translate.get_info()\n",
-    "    assert 'directional_variants' in translate_info['options']\n",
-    "    assert 'x' in translate_info['options']['directional_variants']\n",
-    "\n",
-    "# Run the test\n",
-    "test_transforms_factory_documentation()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98d71578-bcd3-49c9-a8fc-bd532660eade",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81cca3f3-9f08-4b82-8de2-57075de2eb88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
