--- a/nbs/utilities/transitions_and_animation.ipynb
+++ b/nbs/utilities/transitions_and_animation.ipynb
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcacf154-0fef-4281-9bbd-5ec1830031d3",
+   "id": "6c8bd363-2c29-445a-adba-5d89d8633419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +102,17 @@
     "                'predefined_values': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with property: transition(\"width, height\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28614115-1f24-406a-8758-4a825af5efd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create transition property factory\n",
     "transition = TransitionPropertyFactory(\n",
     "    {\n",
@@ -122,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0291d278-fd2e-4e06-844e-8f090fb3d460",
+   "id": "18c2f00b-cfce-4ef4-a788-398afdc1fb65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +174,17 @@
     "                'predefined_values': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with property: transition(\"width, height\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "478ccb89-1a47-48f7-a06b-7459b9e2b8db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Recreate transition property factory with the enhanced class\n",
     "transition = TransitionPropertyFactory(\n",
     "    {\n",
@@ -239,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "transition_behavior = SimpleFactory(\n",
     "    {\n",
     "        \"normal\": \"transition-normal\",\n",
@@ -279,14 +297,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1f96b51-961b-4aaa-b701-6252878bc68e",
+   "id": "9327b129-350f-4044-b6b9-1480174dc228",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Standard duration values in milliseconds\n",
-    "DURATION_SCALE = [0, 75, 100, 150, 200, 300, 500, 700, 1000] # Standard Tailwind duration scale\n",
-    "\n",
+    "DURATION_SCALE = [0, 75, 100, 150, 200, 300, 500, 700, 1000] # Standard Tailwind duration scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8dab486-216d-48cd-9d1c-d8e5f54c0a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "DURATION_CONFIG = ScaleConfig( # Duration configuration\n",
     "    numeric=False,  # Don't use full numeric scale\n",
     "    decimals=False,\n",
@@ -305,8 +332,17 @@
     "        \"initial\": \"initial\"\n",
     "    },\n",
     "    negative=False\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80bb7794-7cf5-47fd-bbd1-0702d7e5b453",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced duration factory with custom value support\n",
     "class DurationFactory(ScaledFactory):\n",
     "    \"\"\"Factory for duration utilities with millisecond support.\"\"\"\n",
@@ -369,8 +405,17 @@
     "                'prefix': self.prefix,\n",
     "                'standard_scale': DURATION_SCALE\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85ca5d92-5113-4fea-9d22-fdc877a14134",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create duration factory\n",
     "duration = DurationFactory(\"duration\", DURATION_CONFIG, \"Transition duration utilities for controlling the duration of CSS transitions\") # The duration factory"
    ]
@@ -454,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34f5d649-7729-4178-b5ea-e0107f62fa7a",
+   "id": "aeaff215-210d-456a-80c1-db9235c71a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,8 +534,17 @@
     "                'predefined_values': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with easing: ease(\"cubic-bezier(0.4, 0, 0.2, 1)\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ca9c37d-e85f-4a75-8934-5390eb733d86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create ease factory\n",
     "ease = EaseFactory(\n",
     "    {\n",
@@ -549,14 +603,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec3f50a-1835-4bc5-b69c-50d2e96c20de",
+   "id": "07913404-b061-43d2-8822-1a92d4e8ab83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "# Standard delay values in milliseconds (same as duration scale)\n",
-    "DELAY_SCALE = [0, 75, 100, 150, 200, 300, 500, 700, 1000] # Standard Tailwind delay scale\n",
-    "\n",
+    "DELAY_SCALE = [0, 75, 100, 150, 200, 300, 500, 700, 1000] # Standard Tailwind delay scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab815314-023e-4c0a-888b-c2457c5d65e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "DELAY_CONFIG = ScaleConfig( # Delay configuration\n",
     "    numeric=False,  # Don't use full numeric scale\n",
     "    decimals=False,\n",
@@ -574,8 +637,17 @@
     "        \"1000\": \"1000\"\n",
     "    },\n",
     "    negative=False\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded67861-a71d-4f01-8598-ae86b223faab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "# Enhanced delay factory with custom value support\n",
     "class DelayFactory(DurationFactory):\n",
     "    \"\"\"Factory for delay utilities with millisecond support.\"\"\"\n",
@@ -600,8 +672,17 @@
     "        self._500 = self(500)\n",
     "        self._700 = self(700)\n",
     "        self._1000 = self(1000)\n",
-    "        # Note: delay doesn't have 'initial' like duration does\n",
-    "\n",
+    "        # Note: delay doesn't have 'initial' like duration does"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc61023b-68ba-4da1-b32c-b51548f6d4b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create delay factory\n",
     "delay = DelayFactory(\"delay\", DELAY_CONFIG, \"Transition delay utilities for controlling the delay of CSS transitions\") # The delay factory"
    ]
@@ -675,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b9cebf-424a-48b1-9a82-3ee1d7a057a0",
+   "id": "d6d2477c-ac8f-4483-9cad-a5ce1f4b0923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,8 +791,17 @@
     "                'predefined_values': list(self._values.keys()),\n",
     "                'custom_usage': 'Call factory with animation: animate(\"slide 1s ease-in-out\")'\n",
     "            }\n",
-    "        }\n",
-    "\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a28c770-705c-4159-b346-3b453cd53403",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "# Create animation factory\n",
     "animate = AnimationFactory(\n",
     "    {\n",
@@ -1264,69 +1354,6 @@
     "server = start_test_server(app)\n",
     "display(HTMX())\n",
     "server.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fafc7521-04d6-4cb2-a9d1-1312f145186a",
-   "metadata": {},
-   "source": [
-    "## Documentation Tests\n",
-    "\n",
-    "Test that all factories provide proper documentation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01d44c0f-5f93-4b61-9474-8f8ae80b5889",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def test_transitions_and_animation_factory_documentation():\n",
-    "    \"\"\"Test that transition and animation factories have accessible documentation.\"\"\"\n",
-    "    # Test transition property factory\n",
-    "    assert transition.describe() == \"Transition property utilities for controlling which CSS properties transition\"\n",
-    "    transition_info = transition.get_info()\n",
-    "    assert 'predefined_values' in transition_info['options']\n",
-    "    assert '' in transition_info['options']['predefined_values']  # Default transition\n",
-    "    assert 'all' in transition_info['options']['predefined_values']\n",
-    "    \n",
-    "    # Test transition behavior factory\n",
-    "    assert transition_behavior.describe() == \"Transition behavior utilities for controlling the behavior of CSS transitions\"\n",
-    "    behavior_info = transition_behavior.get_info()\n",
-    "    assert 'available_values' in behavior_info['options']\n",
-    "    assert 'normal' in behavior_info['options']['available_values']\n",
-    "    assert 'discrete' in behavior_info['options']['available_values']\n",
-    "    \n",
-    "    # Test duration factory\n",
-    "    assert duration.describe() == \"Transition duration utilities for controlling the duration of CSS transitions\"\n",
-    "    duration_info = duration.get_info()\n",
-    "    assert 'standard_scale' in duration_info['options']\n",
-    "    assert duration_info['options']['standard_scale'] == DURATION_SCALE\n",
-    "    \n",
-    "    # Test ease factory\n",
-    "    assert ease.describe() == \"Transition timing function utilities for controlling the easing of CSS transitions\"\n",
-    "    ease_info = ease.get_info()\n",
-    "    assert 'predefined_values' in ease_info['options']\n",
-    "    assert 'linear' in ease_info['options']['predefined_values']\n",
-    "    assert 'in-out' in ease_info['options']['predefined_values']\n",
-    "    \n",
-    "    # Test delay factory\n",
-    "    assert delay.describe() == \"Transition delay utilities for controlling the delay of CSS transitions\"\n",
-    "    delay_info = delay.get_info()\n",
-    "    assert 'standard_scale' in delay_info['options']\n",
-    "    \n",
-    "    # Test animation factory\n",
-    "    assert animate.describe() == \"Animation utilities for animating elements with CSS animations\"\n",
-    "    animate_info = animate.get_info()\n",
-    "    assert 'predefined_values' in animate_info['options']\n",
-    "    assert 'spin' in animate_info['options']['predefined_values']\n",
-    "    assert 'bounce' in animate_info['options']['predefined_values']\n",
-    "\n",
-    "# Run the tests\n",
-    "test_transitions_and_animation_factory_documentation()"
    ]
   },
   {
