--- a/nbs/utilities/typography.ipynb
+++ b/nbs/utilities/typography.ipynb
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdaf31ab-bb3b-43d5-9968-da447ab678ea",
+   "id": "a833bf88-ea8d-4f09-9994-407ed75e2b54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +133,34 @@
     "    NamedScale(\"7xl\"),\n",
     "    NamedScale(\"8xl\"),\n",
     "    NamedScale(\"9xl\"),\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb14d732-b215-44b9-8013-ae159d0343ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
     "FONT_SIZE_CONFIG = ScaleConfig( # Font size configuration\n",
     "    numeric=False,  # No numeric scales for font size\n",
     "    decimals=False,\n",
     "    fractions=False,\n",
     "    named=FONT_SCALES,\n",
     "    negative=False\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af06a3d3-1bfd-416b-89db-963797100455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "font_size = ScaledFactory('text', FONT_SIZE_CONFIG, \"Utilities for controlling the font size of an element.\") # Font size factory"
    ]
   },
